Completando condificación de señales

--- a/4º Año/Comunicaciones y Redes/Unidad 5/5. Codificacion de Señales.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/5. Codificacion de Señales.md
@@ -1,4 +1,4 @@
-En este apartado nos centraremos única y exclusivamente en los esquemas de codificación de datos digitales o señales digitales, ya que en principio las computadoras solo pueden manipular datos digitales.
+En este apartado nos centraremos única y exclusivamente en los esquemas de codificación de datos digitales a señales digitales y analógicas, ya que en principio las computadoras solo pueden manipular datos digitales.
 Las señales digitales son secuencias de pulsos, donde cada pulso representa un elemento de señal. Estos pulsos son discretos y discontinuos, lo que significa que toman valores fijos y están separados en el tiempo. Esta señal puede ser:
 
 - **Unipolar:** Todos los elementos de la señal mantienen el mismo signo algebraico. Esto significa que si se elige una representación positiva para los pulsos, todos los pulsos tendrán valores positivos, y viceversa.
@@ -9,21 +9,25 @@ Cuando se transmiten datos por el medio físico el receptor tiene que realizar d
 1. **Conocer o determinar la duración de cada bit**, es decir, detectar cuando comienza y termina. Esta tarea es crucial para la sincronización entre el transmisor y el receptor.
 2. **Determinar el nivel de cada bit**, el receptor debe detectar si el valor de cada bit es alto (1) o bajo (0). Esta distinción es fundamental para decodificar correctamente la señal digital y reconstruir la información transmitida.
 
-Para mejorar y facilitar la realización de estas tareas y, en parte, la prestación del sistema se utilizan distintos ***esquemas de codificación***. Los esquemas de codificación son métodos establecidos para correlacionar los bits de datos con los elementos de la señal. Estos esquemas son vitales para mejorar la interpretación de las señales digitales y la eficiencia general del sistema de comunicación. A continuación haremos énfasis en alguno de los esquemas más comunes.
+Para mejorar y facilitar la realización de estas tareas y, en parte, la prestación del sistema se utilizan distintos ***esquemas de codificación***. Los esquemas de codificación son métodos establecidos para correlacionar los bits de datos con los elementos de la señal. Estos esquemas son vitales para mejorar la interpretación de las señales digitales y la eficiencia general del sistema de comunicación. 
 
-## No Retorno a Cero (NRZ)
+## Codificación de Datos Digitales a Señales Digitales
+
+A continuación haremos énfasis en alguno de los esquemas más comunes de codificación utilizados para convertir datos digitales en señales digitales.
+
+### No Retorno a Cero (NRZ)
 
 La forma más frecuente y fácil de transmitir señales digitales es mediante la utilización de un nivel diferente de tensión para cada uno de los dos dígitos binarios. Los códigos que siguen esta estrategia comparten la propiedad de que el nivel de tensión se mantiene constante durante la duración del bit. No obstante es habitual utilizar esquemas alternativos de codificación como ***NRZ-L*** que utiliza una tensión positiva para representar al 0 y otra negativa para representar al 1. 
 Otra variante del esquema antes mencionado es ***NRZI***. En este esquema el nivel de voltaje permanece constante durante el bit, pero los datos se codifican según la transición de la señal al inicio del bit. Un **1** se codifica con un cambio en el nivel de voltaje, mientras que un **0** se representa por la ausencia de ese cambio o transición.
 Los códigos NRZ son fáciles de implementar y se destacan por utilizar eficientemente el ancho de banda. La principal limitación de este tipo de señales es la presencia de una componente de corriente continua y la falta de capacidad de sincronización. Esto se debe a que, al transmitir una secuencia continua de unos o ceros, se requiere una tensión constante. Si ocurre una desincronización entre los relojes del transmisor y receptor, la señal podría perderse, ya que no hay transiciones que ayuden a restablecer la sincronización.
 
-## Binarios Multinivel
+### Binarios Multinivel
 
 Las técnicas de codificación denominadas binario multinivel subsanan algunas de las deficiencias mencionadas para los códigos NRZ. Utiliza más de dos niveles de voltaje o estados para representar la información, lo que permite codificar más de un bit por elemento de señal.
 El esquema de codificación ***Bipolar-AMI***, representa a los ceros mediante la ausencia de tensión y los unos se representan como pulsos positivos o negativos. Esto facilita la sincronización, ya que no se necesita corriente continua para la transmisión de datos, además este tipo de codificación hace más sencilla la tarea de detección de errores. 
 Otro esquema que utiliza estas técnicas son los códigos ***Pseudoaleatorios*** lo cuales poseen las mismas ventajas que el bipolar-AMI con la diferencia que los unos se representan mediante la ausencia de tensión mientras que los ceros mediantes pulsos de polaridad alterante.
 
-## Bifase
+### Bifase
 
 Bajo el término *bifase* se engloba a un conjunto de técnicas de codificación alternativas diseñadas para superar las dificultades encontradas en los códigos NRZ. Dos de estas técnicas, denominadas Manchester y Manchester diferencial, se usan frecuentemente en los sistemas de comunicación.
 En los códigos **Manchester**, siempre hay una transición en el medio del intervalo de duración de cada bit, lo que facilita la sincronización entre el transmisor y el receptor. Además, esta transición también transmite los datos, ya que una transición de bajo a alto representa un uno, mientras que una transición de alto a bajo representa un cero.
@@ -36,3 +40,33 @@ Si bien ambos métodos requieren un mayor ancho de banda para transmitir la mism
 
 ## Codificación de Datos Digitales a Señales Analógicas
 
+En la transmisión de datos digitales a través de señales analógicas, se utiliza un dispositivo llamado ***MODEM (Modulador-Demodulador)***. Este dispositivo cumple dos funciones principales:
+
+1. **Modulación**: Convierte los datos digitales en señales analógicas para que puedan ser transmitidos a través de medios que transportan señales analógicas, como las líneas telefónicas. El proceso de modulación implica variar uno o más parámetros de una onda portadora en función de los datos digitales que se desean transmitir.
+2. **Demodulación**: En el receptor, el MODEM realiza el proceso inverso, que consiste en convertir la señal analógica recibida de nuevo en datos digitales, permitiendo que el dispositivo receptor interprete correctamente la información transmitida.
+
+Este proceso de modulación y demodulación permite que los datos digitales, que son discretos y binarios, puedan ser transmitidos eficientemente a través de canales analógicos, manteniendo la integridad de la información. Existen tres técnicas básicas de codificación o de modulación que transforman los datos digitales en señales analógicas:
+
+- **Modulación por desplazamiento de amplitud (ASK)**: Los valores binarios se representan mediante dos amplitudes diferentes de la señal portadora. Este método modifica la amplitud de una onda portadora para codificar los datos. Altas amplitudes pueden representar los unos, mientras que amplitudes bajas representan los ceros. Se usa para velocidades inferiores a 1200 bps en canales telefónicos, aunque también se utiliza para la transmisión de datos digitales a través de fibra óptica.
+- **Modulación por desplazamiento de frecuencia (FSK)**: Los valores binarios se representan mediante un cambio en la frecuencia de la onda portadora. Una frecuencia puede utilizarse para representar los unos y otra distinta para los ceros. Es menos sensible a errores que la ASK, además de ser una señal más eficaz para el uso del ancho de banda. Se usa hasta 1200 bps en canales telefónicos. También se usa en transmisiones de altas frecuencias (3 a 30Mhz).
+- **Modulación por desplazamiento de fase (PSK)**: Representa los valores binarios a través de la modificación de la fase de la onda portadora. En este tipo de método de codificación diferentes fases de la onda pueden representar distintos bits binarios, por ejemplo BPSK utiliza dos fases para representar los datos mientras que QPSK utiliza cuatro fases.
+
+Una vez los datos son transmitidos el receptor tiene que ser capas de captar las señales analógicas y convertirlas en datos digitales nuevamente. El dispositivo que se utiliza para la conversión de los datos analógicos en digitales y que, posteriormente, recupera los datos analógicos iniciales a partir de los digitales se denomina ***CODEC (Codificador-Decodificador)***, estos dispositivos pueden emplear distintas técnicas, aunque las más importantes son:
+
+- **Modulación por impulsos codificados (PCM)**: Este método convierte las señales analógicas en datos digitales basándose en la amplitud que toma la señal en intervalos regulares de tiempo, la cual es cuantificada y luego codificada en valores binarios. Este tipo de métodos constan de tres pasos:
+	1. **Muestreo**: La señal analógica continua se mide en intervalos regulares de tiempo de acuerdo al ***teorema de muestreo***, obteniendo así una serie de valores discretos.
+	2. **Cuantificación**: Cada valor muestreado se redondea al valor más cercano dentro de un conjunto predefinido de niveles, convirtiendo los valores continuos en valores discretos.
+	3. **Codificación**: Los valores cuantificados se transforman en una secuencia de bits, lo que permite que la señal sea transmitida o almacenada en forma digital.
+
+>[!tldr] Teorema de Muestreo de Nyquist
+>El teorema del muestreo nos dice que si usa señal se muestrea en un intervalo regular de tiempo con una frecuencia mayor que el doble de la frecuencia más alta de dicha señal, la miestra así obtenida contiene toda la información de la señal original.
+
+- **Modulación delta (DM)**: En este tipo de métodos, la señal de entrada analógica se aproxima mediante una función escalonada, donde en cada intervalo de muestreo la señal sube o baja un nivel de cuantización. En lugar de transmitir el valor absoluto de la señal, se transmite la diferencia entre el valor actual y el valor anterior de la señal en el intervalo previo.
+
+### Transmisión de Espectro Expandido
+
+El esquema de espectro expandido constituye una forma de codificación cada vez más importante en comunicaciones inalámbricas, puesto que esta técnica puede utilizarse para transmitir tanto datos analógicos como digitales, haciendo uso de una señal analógica. A grandes rasgos, estas técnicas toman los datos de entrada y los codifican en una señal analógica con un ancho de banda relativamente estrecho, centrado en una frecuencia dada. Luego, esta señal es modulada a una frecuencia superior utilizando una secuencia de bits conocida como ***código*** o ***secuencia de expansión***, que generalmente se genera de forma pseudoaleatoria.
+La primera variante de espectro expandido desarrollada fue la denominada por salto de frecuencias. Existe una versión más reciente de espectro expandido que es de secuencia directa.
+
+- **Espectro expandido por salto de frecuencia**: En esta técnica, la señal se transmite cambiando rápidamente de una frecuencia a otra, según una secuencia pseudoaleatoria conocida tanto por el emisor como por el receptor. Esto dificulta la interceptación o interferencia de la señal, ya que solo quien conoce la secuencia puede seguir los saltos de frecuencia y decodificarla correctamente.
+- **Espectro expandido de secuencia directa**: En esta técnica, cada bit de la señal original se combina con una secuencia más larga de bits pseudoaleatorios, lo que resulta en una señal con un ancho de banda más amplio y difícil de interceptar. La expansión de la señal se logra al combinar los datos con estos bits adicionales mediante una operación XOR, lo que dispersa la energía de la señal original a lo largo de un espectro de frecuencias más amplio.
