--- a/4º Año/Comunicaciones y Redes/Veremos/Capa Fisica/2. Esquemas de Codificacion.md
+++ b/4º Año/Comunicaciones y Redes/Veremos/Capa Fisica/2. Esquemas de Codificacion.md
@@ -25,15 +25,11 @@ Estas técnicas fuerzan al menos una transición por cada bit en un periodo. Eje
 
 Se usa un dispositivo MODEM (Modulador-Demodulador) para convertir entre señales digitales y analógicas. La codificación se basa en la modulación de algún parámetro de la onda portadora en función de los datos digitales recibidos. Existen 3 técnicas básicas de codificación o de modulación que transforman los datos digitales en señales analógicas:
 
-1. **ASK (Amplitude Shift Keying)**: Modifica la amplitud de una onda portadora para codificar los datos. Altas amplitudes pueden representar un '1' binario, mientras que amplitudes bajas representan un '0'. Se usa para velocidades inferiores a 1200 bps en canales telefónicos
 
-2. **FSK (Frequency Shift Keying)**: Cambia la frecuencia de la onda portadora para representar los datos. Una frecuencia puede indicar un '1' binario y otra distinta un '0'. Es menos sensible a errores que la ASK y se usa hasta 1200 bps en canales telefónicos. También se usa en transmisiones altas frecuencias (3 a 30Mhz).
-
-3. **PSK (Phase Shift Keying)**: Ajusta la fase de la onda portadora para codificar los datos. Diferentes fases de la onda pueden representar distintos bits binarios.
 
 La conversión de datos analógicos en digitales se realiza con base en un dispositivo que se llama CODEC (Codificador-Decodificador). Las dos técnicas más importantes son:
 - **Modulación por impulsos codificados (MIC):** En ingles PCM (Pulse Code Modulation), se basa en al codificación digital de la amplitud que va tomando la señal analógica a intervalos regulares. Las muestras obtenidas contienen toda la información de la señal original.
-- **Modulación delta (DM = Delta Modulation):** Codifica digitalmente la diferencia de amplitud de la señal de 2 muestras sucesivas.
+- **Modulación delta (DM):** Codifica digitalmente la diferencia de amplitud de la señal de 2 muestras sucesivas.
 
 La MIC se realiza en dos pasos:
 1. **Paso 1:** La señal analógica se muestrea a intervalos regulares, siguiendo el teorema de muestreo, que dice que la frecuencia de muestreo debe ser al menos el doble de la frecuencia más alta presente en la señal. Cada muestra captura la amplitud de la señal en ese momento, preservando toda su información.
@@ -50,7 +46,7 @@ Esta técnica se puede usar para transmitir tanto señales analógicas como digi
 Tiene dos variantes que se utilizan en redes de datos y de telefonía inalámbricas.
 
 ##### Spread Spectrum - Salto de frecuencias
-En esta tecnica, la señal se modula cambiando entre distintas frecuencias basándose en una secuencia pseudoaleatoria conocida tanto por el transmisor como por el receptor. Esto hace que la señal sea más difícil de interceptar o interferir, ya que solo quien conoce la secuencia puede seguir los cambios de frecuencia y decodificar la señal correctamente.
+En esta técnica, la señal se modula en distintas frecuencias basándose en una secuencia pseudoaleatoria conocida tanto por el emisor como el receptor. Esto hace que la señal sea más difícil de interceptar o interferir, ya que solo quien conoce la secuencia puede seguir los cambios de frecuencia y decodificar la señal correctamente.
 
 ##### Spread Spectrum - Secuencia Directa
-En esta técnica, cada bit de información se mezcla con una secuencia más larga de bits pseudoaleatorios, lo que resulta en una señal más ancha y difícil de interceptar. La señal se expande al combinar los datos con estos bits adicionales mediante una operación lógica, generalmente un OR-exclusivo, lo que dispersa la energía de la señal original a lo largo de un espectro de frecuencias más amplio.
+En esta técnica, cada bit de la señal original se mezcla con una secuencia más larga de bits pseudoaleatorios, lo que resulta en una señal más ancha y difícil de interceptar. La señal se expande al combinar los datos con estos bits adicionales mediante una operación XOR, lo que dispersa la energía de la señal original a lo largo de un espectro de frecuencias más amplio.
