--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Computacion del Calculo Proporsional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Computacion del Calculo Proporsional.md
@@ -82,4 +82,50 @@ La primera y segunda cláusula se dicen definidas, aunque la primera recibe el n
 >Supongamos que queremos probar que $Q$ se deduce de un conjunto $P$. Si de un conjunto $P$ se prueba $Q$, entonces $P \cup \{¬Q\}$ tiene que ser inconsistente, por lo tanto, debe existir una refutación de $P \cup \{¬Q\}$.
 >Veamos esto con un ejemplo, si queremos probar que $A$ se deduce de $P = \{¬B \vee A, B\}$, entonces negamos la consulta quedándonos $¬A$ y $P \cup \{¬A\}$ lo que nos ayudará en la refutación. Si querríamos expresar esto en una cláusula de Horn nos quedaría $\leftarrow Q$. 
 
+## Completitud del Cálculo Proposicional
+
+Hemos descrito el método de resolución proposicional, que permite generar refutaciones de un conjunto de cláusulas. Al refutar dichas cláusulas, demostramos que su conjunción es contradictoria, es decir, imposible de satisfacer.
+El concepto de resolvente fija se refiere a una cláusula $C$, que actúa como la resolvente de un par de cláusulas de un conjunto $S$. Si $C$ es una resolvente fija de un par de cláusulas de $S$, denotado como $S \longrightarrow C$. Usaremos la notación $S \stackrel{*}{\longrightarrow} C$ cuando exista una deducción por resolución de $C$ a partir de $S$. Asimismo, $S \stackrel{*}{\longrightarrow} \square$ indica que existe una deducción por resolución de la contradicción, es decir de la refutación de $C$ a partir de $S$.
+Para entender lo anterior tengamos en cuenta el siguiente conjunto $S = \{ P \lor Q, \neg P \lor R, ¬Q \lor R \}$, podemos deducir $R$ por resolución, es decir, $S \stackrel{*}{\longrightarrow} R$. Para ello podemos refutar $R$ agregando su negación al conjunto $S$ y aplicando resolución, en ese caso nuestro nuevo conjunto estaría conformado de la siguiente manera $S = \{ P \lor Q, \neg P \lor R, \neg Q \lor R, \neg R \}$. Dicho conjunto es refutable, ya que $S \stackrel{*}{\longrightarrow} \square$, por lo tanto, $R$ es deducible en $S$.
+Como mostramos en el ejemplo anterior, si bien a partir de un conjunto de cláusulas $S$ se puede deducir por resolución una cláusula $C$, la deducción no necesariamente es única. En el ejemplo antes dado podemos refutar $R$ mediante dos formas posibles. Por lo tanto, lo óptimo sería desarrollar un método algorítmico para verificar si el conjunto $S$ es refutable. El procedimiento ya existe y es el siguiente.
+
+![[procedimiento-refutacion.png]]
+
+Dado un conjunto $S$ de cláusulas, definimos $\Re(S)$ como la unión de $S$ con el conjunto de todas las resolventes fijas de la cláusula $S$, formalmente denotado:
+
+$$\Re(S) = S \cup \{C : C \text{es una resolvente de } C_1 \text{ y } C_2 \ / \ C_1, C_2 \in S\}$$
+Definimos entonces a la aplicación de $\Re$ de la siguiente manera $\Re^0(S) = S$ siendo $\Re^{n + 1}(S) = \Re(\Re^n(S))$.
+Notamos que para cualquier $S$ se cumple lo siguiente:
+
+$$S = \Re^0(S) \subseteq \Re^1(S) \subseteq \Re^2(S) \subseteq \dots \subseteq \Re^n(S)$$
+
+Es decir, la aplicación sucesiva del operador $\Re$ produce una secuencia creciente, en el sentido de la inclusión de conjuntos. La razón es que si $X$ es un conjunto cualquiera de sentencias, el conjunto $\Re(X)$ es el resultado de agregar a $X$ las resolventes que se calcularon a partir de las cláusulas que contiene el conjunto inicial.
+Si nos planteamos la posibilidad de que esa secuencia termine, es decir si es posible llegar a un punto donde $\Re^m(S) = \Re^k(S)$ para todo $k > m$ este sería un ***punto fijo*** del operador $\Re$. Nótese que si una secuencia creciente tiene una cota superior, entonces la secuencia tiene un límite. Una cota posible para el conjunto $S$ presentado anteriormente podría ser $S^*$, es decir el conjunto de todas las posibles cláusulas que se pueden construir con los literales que aparecen en $S$. Esto quiere decir que la secuencia generada de aplicar el operador $\Re$ sobre cualquier conjunto $S$ termina en un cierto valor de $n$, es decir la operación de la resolvente se cierra luego de un determinado número finito de pasos. Por lo tanto, dado cualquier conjunto $S$ de cláusulas, la proposición $S \stackrel{*}{\longrightarrow} \square$ es ***decidible***.
+
+## Resultados Meta-Teóricos
+
+A continuación pasaremos a describir una serie de lemas y teoremas que nos ayudaran a probar que el cálculo proposicional es completo y sensato[^2]. Además de una serie de definiciones.
+
+1. Si $P$ es un axioma, entonces $P$ es una tautología.
+2. Si $\vdash P$ entonces $\vDash P$. Este teorema asegura la sensatez de la teoría $L$ presentada con anterioridad.
+3. Si $S$ es un conjunto ***insatisfacible*** de cláusulas fijas, tal que $A \in S$ y $B \subseteq A$, entonces $S$ con $A$ reemplazado con $B$ es un conjunto insatisfacible.
+
+>[!tldr] Insatisfacibilidad de un Conjunto
+>Observemos que el lema anterior asegura que si un conjunto de cláusulas es insatisfacible, no se puede hacer satisfacible eliminando literales de una cláusula, al eliminar estos literales la cláusula se vuelve más díficil de satisfacer. En cambio, si se elimina una cláusula por completo la situación cambia. Por ejemplo dado el conjunto $S = \{\{¬R\},\{R\}\}$ si eliminamos $\{¬R\}$ del mismo, claramente el conjunto pasa a ser satisfacible.
+
+4. Si $S$ es un conjunto de cláusulas fijas ***insatisfacibles minimal*** entonces $S \stackrel{*}{\longrightarrow} \square$.
+
+>[!tldr] Conjunto Insatisfacible Minimal
+>Un conjunto $S$ de cláusulas es insatisfacible minial si $S$ es insatisfacible y además no existe $S' \subset S$ que sea insatisfacible. Cada conjunto insatisfacible contiene un conjunto insatisfacible minimal, pero no puede ser el único. Por ejemplo, el siguiente conjunto $S = \{\{P\}, \{Q\}, \{¬P\}, \{¬Q\}\}$  tiene dos conjuntos insatisfacibles minimales distintos, por un lado, el conjunto $\{\{P\}, \{¬P\}\}$ y por otro $\{\{Q\}, \{¬Q\}\}$.
+
+5. Si $\vDash S$ entonces $¬S \stackrel{*}{\longrightarrow} \square$.
+6. Si $¬S \stackrel{*}{\longrightarrow} \square$ entonces $\vdash S$.
+
+Con todos estos teoremas y lemas ya presentados podríamos crear entonces la siguiente secuencia:
+
+$$\vdash S \Rightarrow \ \vDash S \Rightarrow ¬S \stackrel{*}{\longrightarrow} \square \Rightarrow \ \vdash S$$
+
+Entonces podríamos decir que en el cálculo proposicional vale que $\vdash S$ si y solo si $\vDash S$ si y solo si $¬S \stackrel{*}{\longrightarrow} \square$.
+
 [^1]: Para más claridad sobre el concepto de completitud y sensatez puede leer la sección sobre [[1. Teorias Formales#Teoría de Pruebas|Teorías de Prueba]].
+[^2]: Para ver las demostraciones de cada uno de los lemas y teoremas leer el capítulo 2 del R. Davis.
