--- a/4º Año/Comunicaciones y Redes/Unidad 5/5. Codificacion de Señales.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/5. Codificacion de Señales.md
@@ -25,7 +25,7 @@ Los códigos NRZ son fáciles de implementar y se destacan por utilizar eficient
 
 Las técnicas de codificación denominadas binario multinivel subsanan algunas de las deficiencias mencionadas para los códigos NRZ. Utiliza más de dos niveles de voltaje o estados para representar la información, lo que permite codificar más de un bit por elemento de señal.
 El esquema de codificación ***Bipolar-AMI***, representa a los ceros mediante la ausencia de tensión y los unos se representan como pulsos positivos o negativos. Esto facilita la sincronización, ya que no se necesita corriente continua para la transmisión de datos, además este tipo de codificación hace más sencilla la tarea de detección de errores. 
-Otro esquema que utiliza estas técnicas son los códigos ***Pseudoaleatorios*** lo cuales poseen las mismas ventajas que el bipolar-AMI con la diferencia que los unos se representan mediante la ausencia de tensión mientras que los ceros mediantes pulsos de polaridad alterante.
+Otro esquema que utiliza estas técnicas son los códigos ***Pseudoaleatorios*** lo cuales poseen las mismas ventajas que el bipolar-AMI con la diferencia que los unos se representan mediante la ausencia de tensión mientras que los ceros mediante pulsos de polaridad alterante.
 
 ### Bifase
 
@@ -48,7 +48,7 @@ En la transmisión de datos digitales a través de señales analógicas, se util
 Este proceso de modulación y demodulación permite que los datos digitales, que son discretos y binarios, puedan ser transmitidos eficientemente a través de canales analógicos, manteniendo la integridad de la información. Existen tres técnicas básicas de codificación o de modulación que transforman los datos digitales en señales analógicas:
 
 - **Modulación por desplazamiento de amplitud (ASK)**: Los valores binarios se representan mediante dos amplitudes diferentes de la señal portadora. Este método modifica la amplitud de una onda portadora para codificar los datos. Altas amplitudes pueden representar los unos, mientras que amplitudes bajas representan los ceros. Se usa para velocidades inferiores a 1200 bps en canales telefónicos, aunque también se utiliza para la transmisión de datos digitales a través de fibra óptica.
-- **Modulación por desplazamiento de frecuencia (FSK)**: Los valores binarios se representan mediante un cambio en la frecuencia de la onda portadora. Una frecuencia puede utilizarse para representar los unos y otra distinta para los ceros. Es menos sensible a errores que la ASK, además de ser una señal más eficaz para el uso del ancho de banda. Se usa hasta 1200 bps en canales telefónicos. También se usa en transmisiones de altas frecuencias (3 a 30Mhz).
+- **Modulación por desplazamiento de frecuencia (FSK)**: Los valores binarios se representan mediante un cambio en la frecuencia de la onda portadora. Una frecuencia puede utilizarse para representar los unos y otra distinta para los ceros. Es menos sensible a errores que la ASK, además de ser una señal más eficaz para el uso del ancho de banda. Se usa hasta 1200 bps en canales telefónicos. También se usa en transmisiones de altas frecuencias (3 a 30 MHz).
 - **Modulación por desplazamiento de fase (PSK)**: Representa los valores binarios a través de la modificación de la fase de la onda portadora. En este tipo de método de codificación diferentes fases de la onda pueden representar distintos bits binarios, por ejemplo BPSK utiliza dos fases para representar los datos mientras que QPSK utiliza cuatro fases.
 
 Una vez los datos son transmitidos el receptor tiene que ser capas de captar las señales analógicas y convertirlas en datos digitales nuevamente. El dispositivo que se utiliza para la conversión de los datos analógicos en digitales y que, posteriormente, recupera los datos analógicos iniciales a partir de los digitales se denomina ***CODEC (Codificador-Decodificador)***, estos dispositivos pueden emplear distintas técnicas, aunque las más importantes son:
@@ -59,7 +59,7 @@ Una vez los datos son transmitidos el receptor tiene que ser capas de captar las
 	3. **Codificación**: Los valores cuantificados se transforman en una secuencia de bits, lo que permite que la señal sea transmitida o almacenada en forma digital.
 
 >[!tldr] Teorema de Muestreo de Nyquist
->El teorema del muestreo nos dice que si usa señal se muestrea en un intervalo regular de tiempo con una frecuencia mayor que el doble de la frecuencia más alta de dicha señal, la miestra así obtenida contiene toda la información de la señal original.
+>El teorema del muestreo nos dice que si usa señal se muestrea en un intervalo regular de tiempo con una frecuencia mayor que el doble de la frecuencia más alta de dicha señal, la muestra así obtenida contiene toda la información de la señal original.
 
 - **Modulación delta (DM)**: En este tipo de métodos, la señal de entrada analógica se aproxima mediante una función escalonada, donde en cada intervalo de muestreo la señal sube o baja un nivel de cuantización. En lugar de transmitir el valor absoluto de la señal, se transmite la diferencia entre el valor actual y el valor anterior de la señal en el intervalo previo.
 
