--- a/4º Año/Comunicaciones y Redes/Unidad 5/6. Medios de Transmision y Hardware de Red.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/6. Medios de Transmision y Hardware de Red.md
@@ -22,7 +22,7 @@ Hay dos variantes de pares trenzados, los apantallados y los sin apantallar. Los
 >- **Tipo 4**: cables y hardware asociado, diseñados para frecuencias de hasta 20 MHz.
 >- **Tipo 5**: cables y hardware asociado, diseñados para frecuencias de hasta 100 MHz.
 >
->De entre los anteriores, los tipos 3 y 5 son los más utilizados en los entornos LAN. Los cables de tipo 3 son los más utilizados para realizar el cableado en la mayoría de los edificios, estos permiten una velocidad de transmisión de hasta 16Mbps. El tipo 5 es un cable de mejores características para la transmisión de datos, este tipo de cables permite alcanzar una velocidad de transmisión de hasta 100Mbps.
+>De entre los anteriores, los tipos 3 y 5 son los más utilizados en los entornos LAN. Los cables de tipo 3 son los más utilizados para realizar el cableado en la mayoría de los edificios, estos permiten una velocidad de transmisión de hasta 16 Mbps. El tipo 5 es un cable de mejores características para la transmisión de datos, este tipo de cables permite alcanzar una velocidad de transmisión de hasta 100 Mbps.
 >La principal diferencia entre ambos cables radica en los pasos de torsión o de trenzado de los cables.
 
 ### Cable Coaxial
@@ -88,7 +88,7 @@ El principal problema tanto para los medios guiados como no guiados es el alcanc
 Los puentes son dispositivos que sirve para interconectar segmentos de red formando una sola subred administrada por el mismo puente. Son piezas de hardware que tienen CPU, memoria y dos interfaces de red, situándose así en el segundo nivel del modelo OSI, la principal diferencia entre los puentes y los repetidores es que los puentes utilizan una interfaz de red y por eso son capaces de entender y manejar tramas, realizando algunas tareas como el filtraje de tráfico, el control de error de las tramas y además determinan a qué segmento de la red se debe ser enviada una trama.
 La motivación detrás del uso de los puentes es que también ayudan a extender la longitud de la red y por ende el número de nodos que la constituyen, permiten reducir el cuello de botella producido por tener muchos nodos generando tráfico sobre una sola línea, ya que los puentes pueden leer el campo de dirección de destino de las tramas, descartando aquellas tramas cuya dirección de destino y de origen sea el mismo segmento. Además de poder llevar un control de que estaciones están conectadas a la red local y a qué segmento pertenecen.
 
-### Conmutadores (switches)
+### Conmutadores (Switches)
 
 Los conmutadores o switches son dispositivos que soporta múltiples segmentos y realiza el intercambio de tramas entre ellas mediante un bus de muy alta velocidad. A diferencia de los hubs y los switches toman decisiones basándose en las direcciones MAC evitando así la saturación del medio, se puede decir que switch administra de forma inteligente el ancho de banda. El propósito de este dispositivo es concentrar la conectividad, haciendo que la transmisión de datos sea más eficiente, conmutando las tramas desde las interfaces de entrada hacia los puertos de salida, dando a cada puerto el ancho de banda total.
 Tanto los conmutadores como los puentes tiene la capacidad de construir de forma automática sus tablas de direccionamiento, evitando así que los administradores y/o usuarios tengan que configurar el dispositivo de forma manual.
