--- a/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Computacion del Calculo Proporsional.md
+++ b/4º Año/Logica para las Ciencias Informaticas/Unidad 2/2. Computacion del Calculo Proporsional.md
@@ -111,12 +111,12 @@ A continuación pasaremos a describir una serie de lemas y teoremas que nos ayud
 3. Si $S$ es un conjunto ***insatisfacible*** de cláusulas fijas, tal que $A \in S$ y $B \subseteq A$, entonces $S$ con $A$ reemplazado con $B$ es un conjunto insatisfacible.
 
 >[!tldr] Insatisfacibilidad de un Conjunto
->Observemos que el lema anterior asegura que si un conjunto de cláusulas es insatisfacible, no se puede hacer satisfacible eliminando literales de una cláusula, al eliminar estos literales la cláusula se vuelve más díficil de satisfacer. En cambio, si se elimina una cláusula por completo la situación cambia. Por ejemplo dado el conjunto $S = \{\{¬R\},\{R\}\}$ si eliminamos $\{¬R\}$ del mismo, claramente el conjunto pasa a ser satisfacible.
+>Observemos que el lema anterior asegura que si un conjunto de cláusulas es insatisfacible, no se puede hacer satisfacible eliminando literales de una cláusula, al eliminar estos literales la cláusula se vuelve más difícil de satisfacer. En cambio, si se elimina una cláusula por completo la situación cambia. Por ejemplo dado el conjunto $S = \{\{¬R\},\{R\}\}$ si eliminamos $\{¬R\}$ del mismo, claramente el conjunto pasa a ser satisfacible.
 
 4. Si $S$ es un conjunto de cláusulas fijas ***insatisfacibles minimal*** entonces $S \stackrel{*}{\longrightarrow} \square$.
 
 >[!tldr] Conjunto Insatisfacible Minimal
->Un conjunto $S$ de cláusulas es insatisfacible minial si $S$ es insatisfacible y además no existe $S' \subset S$ que sea insatisfacible. Cada conjunto insatisfacible contiene un conjunto insatisfacible minimal, pero no puede ser el único. Por ejemplo, el siguiente conjunto $S = \{\{P\}, \{Q\}, \{¬P\}, \{¬Q\}\}$  tiene dos conjuntos insatisfacibles minimales distintos, por un lado, el conjunto $\{\{P\}, \{¬P\}\}$ y por otro $\{\{Q\}, \{¬Q\}\}$.
+>Un conjunto $S$ de cláusulas es insatisfacible minimal si $S$ es insatisfacible y además no existe $S' \subset S$ que sea insatisfacible. Cada conjunto insatisfacible contiene un conjunto insatisfacible minimal, pero no puede ser el único. Por ejemplo, el siguiente conjunto $S = \{\{P\}, \{Q\}, \{¬P\}, \{¬Q\}\}$ tiene dos conjuntos insatisfacibles minimales distintos, por un lado, el conjunto $\{\{P\}, \{¬P\}\}$ y por otro $\{\{Q\}, \{¬Q\}\}$.
 
 5. Si $\vDash S$ entonces $¬S \stackrel{*}{\longrightarrow} \square$.
 6. Si $¬S \stackrel{*}{\longrightarrow} \square$ entonces $\vdash S$.
