Completando unidad 5 | Redes

--- a/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas y Virtuales.md
+++ b/4º Año/Comunicaciones y Redes/Unidad 5/3. Redes de Area Local Inalambricas y Virtuales.md
@@ -161,6 +161,20 @@ El formato de la trama para las redes WiMAX es el que se muestra en la imagen, e
 
 ![[trama-wimax.png]]
 
+## Redes Celulares Inalámbricas
+
+La radio celular es una técnica que fue desarrollada con el fin de incrementar la capacidad disponible para el servicio de telefonía móvil sobre radio. La esencia de una red celular reside en el uso de múltiples transmisores de baja potencia, del orden de 100 W o menos. Como el rango de un transmisor con estas características es pequeño, el área debe ser dividida en celdas, la cual dispone de su propia antena. A cada celda se le asigna una frecuencia y una ***estación base*** que le presta servicios, el resto de celdas adyacentes reciben una asignación distinta de frecuencia para evitar así las interferencias o diafonía. Conceptualmente, las celdas se pueden organizar en distintos patrones, como se ve en la imagen.
+
+![[patrones-celulas.png]]
+
+En la actualidad se utiliza el patrón hexagonal, ya que este permite que cada celda esté a la misma distancia de la estación base, tal y como se muestra en la imagen. Esto garantiza si un usuario se traslada nunca se quede sin conexión.
+Cada celda en un sistema celular posee un transceptor base. La potencia de transmisión se controla cuidadosamente para permitir la comunicación dentro de la celda utilizando una frecuencia dada, a la vez que se limita la potencia en esa frecuencia que escapa de los límites de la celda, alcanzando así las adyacentes.
+El objetivo principal es lograr usar la misma frecuencia en otras celdas cercanas, permitiendo de esta forma que la misma frecuencia pueda ser empleada en varias conversaciones simultáneamente. La cuestión esencial es determinar cuántas celdas debe haber entre dos celdas que utilizan la misma frecuencia para que estas dos no interfieran entre sí, tal y como se aprecia en la imagen.
+
+![[patron-reutilizacion.png]]
+
+Cabe aclarar que lo mostrado en la imagen es solo uno de los varios patrones que existen para la reutilización de señales.
+
 ## Bluetooth
 
 El estándar IEEE 802.15 define un tipo de red inalámbrica de corto alcance, que opera a una baja potencia y a un bajo coste. Al contrario de las redes definidas por la IEEE 802.11 que poseen un punto de acceso, mayor potencia y una mayor velocidad, tecnologías como Bluetooth no requieren de ningún tipo de infraestructura para operar y posee un alcance más reducido, por esta razón suele referirse a este tipo de redes como redes inalámbricas de área personal (WPAN).
