Completando y corrigiendo | DB

--- a/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
+++ b/4º Año/Bases de Datos/Unidad 8/4. Acceso Multiclave.md
@@ -34,7 +34,7 @@ Por otro lado, los índices de ***mapas de bits*** son un tipo de índices espec
 Considérese una relación $r$ con un atributo $A$ que sólo puede tomar un número pequeño de valores. Por ejemplo, la relación *info_cliente* la cual puede tener un campo sexo, que puede tomar sólo los valores ***M*** o ***F***, para este caso se podría tener un mapa de bits para el valor M y otro para F. El i-ésimo bit del mapa de bits para M se establece en 1 si el valor sexo del registro con número $i$ es M, mientras que el resto de bits del mapa de bits se establecen en 0.
 Otro uso importante de los mapas de bits es contar el número de tuplas que satisfacen una selección dada esto resulta importante para el análisis de datos, de este modo la forma de saber la cantidad de tuplas que satisfacen ciertas condiciones es tan simple como hacer la intersección entre mapas de bits. Así se puede obtener el resultado del mapa de bits sin acceder a la relación. Además los índices de mapas de bits son generalmente muy pequeños comparados con el tamaño real de la relación. Los registros tienen generalmente de decenas a centenas de bytes, mientras que un único bit representa a un registro en el mapa de bits.
 
->[!tldr] Actialización den los Ídices de Mapas de Bits.
+>[!tldr] Actialización de los Ídices de Mapas de Bits.
 >El borrado de registros crea huecos en la secuencia de registros, ya que el desplazamiento de registros o de los números de registro para rellenar los huecos sería excesivamente costoso. Para reconocer los registros borrados se puede almacenar un mapa de bits de existencia en el que el bit $i$ es 0 si el registro $i$ no existe, y 1 en caso contrario.
 >La inserción de registros, por su parte, no afecta a la secuencia de numeración de otros registros. Por tanto, se puede insertar tanto añadiendo registros al final del archivo como reemplazando los registros borrados.
 
