--- a/4º Año/Bases de Datos/Unidad 10/1. Control de Concurrencia.md
+++ b/4º Año/Bases de Datos/Unidad 10/1. Control de Concurrencia.md
@@ -1,21 +1,33 @@
 
-En un entorno de multiprogramación es posible ejecutar varias transacciones de manera concurrente, por esa razón es necesario que el gestor de la base de datos controle la interacción entre las transacciones para evitar se destruya la consistencia en la base de datos.
-Estos controles se realizan por mecanismos que se conocen como esquemas de control de concurrencia conocidos como ***cronogramas (Schedules)*** los cuales representan el orden cronológico en que se ejecutan las instrucciones en el sistema. Para ayudar a identificar las ejecuciones que garantizan la consistencia, se presentará el concepto de ***serializabilidad***.
+En un entorno de multiprogramación es posible ejecutar varias transacciones de manera concurrente, por esa razón es necesario que el gestor de la base de datos controle la interacción entre las transacciones para evitar las inconsistencias en la base de datos.
+Estos controles son realizados por los distintos esquemas de control de concurrencia, también conocidos como ***cronogramas (Schedules)*** los cuales representan el orden cronológico en que se ejecutan las instrucciones en el sistema. Para ayudar a identificar las ejecuciones que garantizan la consistencia, se presentará el concepto de ***serializabilidad***.
 
->[!note] Concepto de Serializabilidad
->La serializabilidad de una transacción asegura que una planificación de transacciones concurrentes es correcta y consistente. Una planificación es serializable si el resultado de su ejecución es el mismo que se obtendría si las transacciones se ejecutaran en algún orden secuencial. En otras palabras, aunque las transacciones se ejecuten de manera concurrente, una planificación es serializable si se puede reordenar de tal manera que el efecto combinado de las transacciones sea igual al de alguna ejecución en serie de esas transacciones manteniendo así la consistencia de la base de datos.
+>[!info] Concepto de Serializabilidad
+>La serializabilidad en bases de datos garantiza que la ejecución concurrente de transacciones sea correcta y consistente. Una planificación es serializable si su resultado es equivalente al que se obtendría ejecutando las transacciones en un orden secuencial. Es decir, aunque las transacciones se realicen de forma concurrente, la planificación es serializable si puede reordenarse de modo que el efecto final sea el mismo que el de una ejecución en serie, preservando la consistencia de la base de datos.
 
 Cuando se ejecutan transacciones de forma concurrente en una base de datos, es posible que la planificación de estas no siga un orden en serie, lo que significa que no se procesan de manera secuencial una tras otra. Esta falta de secuencialidad puede dar lugar a inconsistencias temporales, que son la principal causa de las inconsistencias en las planificaciones concurrentes.
 
 ## Equivalencia de Conflictos
 
-Dado un cronograma $S$ en la que hay dos operaciones consecutivas $I_i$ e $I_k$ de las transacciones $T_i$ y $T_k$ respectivamente.
+Dado un cronograma $S$ en la que hay dos operaciones consecutivas $I_i$ e $I_k$ de las transacciones $T_i$ y $T_k$ respectivamente. Si $I_i$ e $I_k$ se refieren a datos distintos, entonces podemos intercambiar el orden de $I_i$ e $I_k$ sin que esto afecte el resultado de las instrucciones del cronograma. Sin embargo, si $I_i$ e $I_k$ se refieren al mismo dato $Q$, el orden de los pasos puede ser importante.
+Las operaciones de lectura concurrentes no son relevantes, ya que ambas transacciones inicialmente leerán el mismo valor de $Q$. Las operaciones críticas son las de escritura, puesto que puede ocurrir alguno de los siguientes casos:
 
-- Si $I_i$ e $I_k$ se refieren a datos distintos, entonces podemos intercambiar el orden de $I_i$ e $I_k$ sin que esto afecte el resultado de las instrucciones del cronograma. Sin embargo, si $I_i$ e $I_k$ se refieren al mismo dato $Q$, el orden de los pasos puede ser importante. Las operaciones de lectura concurrentes no son relevantes, ya que ambas transacciones inicialmente leerán el mismo valor de $Q$. Las operaciones críticas son las de escritura.
-- Si $I_i = read(Q)$ y $I_k = write(Q)$, el orden de $I_i$ e $I_k$ si importa, ya que si $T_k$ escribe antes que $T_i$ lea, el valor leído por $T_i$ es el escrito por $T_k$. Lo mismo ocurre en caso inverso, es decir, si $I_i = write(Q)$ y $I_k = read(Q)$.
-- Si $I_i = write(Q)$ y $I_k = write(Q)$, el orden de $I_i$ e $I_k$ si importa, ya que afecta al valor de $Q$ que lea la siguiente transacción, a este problema de aquí se lo conoce como **race condition**.
+1. Si $I_i = read(Q)$ y $I_k = write(Q)$, el orden de $I_i$ e $I_k$ si importa, puesto que si $T_i$ lee antes que $T_k$ escriba, el valor leído por $T_i$ es un valor antiguo lo que puede generar problemas. Lo mismo ocurre en caso inverso, es decir, si $I_i = write(Q)$ y $I_k = read(Q)$.
+2. Si $I_i = write(Q)$ y $I_k = write(Q)$, el orden de $I_i$ e $I_k$ si importa, ya que afecta el valor de $Q$ que lea la siguiente transacción, a este problema de aquí se lo conoce como ***race condition***.
 
-Se dice que $I_i$ e $I_k$ están en conflicto, si son operaciones de transacciones distintas sobre el mismo dato, y por lo menos una de estas instrucciones es una operación de escritura. Por otro lado si un cronograma $S$ puede transformarse en un cronograma $S'$ mediante una serie de intercambios de instrucciones no conflictivas, se dice que son ***equivalentes en conflictos***. Se dice que un cronograma $S$ es ***serializable en conflictos*** si es equivalente en conflictos a un cronograma en serie.
+Se dice que $I_i$ e $I_k$ están en conflicto, si son operaciones de transacciones distintas sobre el mismo dato, y por lo menos una de estas instrucciones es una operación de escritura. Por otro lado, si un cronograma $S$ puede transformarse en un cronograma $S'$ mediante una serie de intercambios de instrucciones no conflictivas, se dice que son ***equivalentes en conflictos***. Se dice que un cronograma $S$ es ***serializable en conflictos*** si es equivalente en conflictos a un cronograma en serie.
+
+### Prueba de Serializabilidad
+
+Consiste en construir un grafo de precedencia $G = (V, E)$, donde $V$ es un conjunto de vértices y $E$ es un conjunto de aristas. El conjunto de vértices consta de todas las transacciones que participan en el cronograma. El conjunto de aristas consta de todas las aristas $T_i \Rightarrow T_k$ para las cuales se cumple una de las siguientes condiciones:
+
+- $T_i$ ejecuta $write(Q)$ antes que $T_k$ ejecute $read(Q)$.
+- $T_i$ ejecuta $read(Q)$ antes que $T_k$ ejecute $write(Q)$.
+- $T_i$ ejecuta $write(Q)$ antes que $T_k$ ejecute $write(Q)$.
+
+Si el grafo de precedencia tiene un ciclo, entonces el cronograma no es serializable en conflictos, véase un ejemplo en la siguiente imagen.
+
+![[ejemplo-soncronizacion.png]]
 
 ## Equivalencia en Vistas
 
@@ -29,47 +41,35 @@ Un cronograma $S$ se dice que es serializable en vistas si es equivalente en vis
 
 ![[equivalencia-vista.png]]
 
-En este caso ese cronograma concurrente es equivalente al siguiente cornograma en serie $<T_2 - T_3 - T_5>$.
+En este caso, el cronograma concurrente mostrado en la imagen es equivalente al siguiente cronograma en serie $<T_2 - T_3 - T_5>$. En el ejemplo anterior $T_3$ y $T_5$ realizan operaciones de escritura sin antes haber realizado ninguna operación de lectura, a este comportamiento se los llama ***escritura ciega***.
 
->[!tldr] Escrituras Ciegas
->En el ejemplo anterior $T_3$ y $T_5$ realizan operaciones de escritura sin antes haber realizado ninguna operaciones de lectura, a este comportamiento se los llama ***escritura ciega***.
-
-## Prueba de Serializabilidad
-
-Consiste en construir un grafo de precedencia $G = (V, E)$, donde $V$ es un conjunto de vértices y $E$ es un conjunto de aristas. El conjunto de vértices consta de todas las transacciones que participan en el cronograma. El conjunto de aristas consta de todas las aristas $T_i \Rightarrow T_k$ para las cuales se cumple una de las siguientes condiciones:
-
-- $T_i$ ejecuta $write(Q)$ antes que $T_k$ ejecute $read(Q)$.
-- $T_i$ ejecuta $read(Q)$ antes que $T_k$ ejecute $write(Q)$.
-- $T_i$ ejecuta $write(Q)$ antes que $T_k$ ejecute $write(Q)$.
-
-Si el grafo de precedencia tiene un ciclo, entonces el cronograma no es serializable en conflictos, véase un ejemplo en la siguiente imagen.
-
-![[ejemplo-serializacion.png]]
+>[!note] Aclaración
+>Las bases de datos no le prestan mucha atención a la equivalencia en vistas, ya que genera muchos problemas adicionales. Por lo general las bases de datos utilizan mecanismos muchos más restrictivos para asegurar la atomicidad y la consistencia en las transacciones.
 
 ## Esquemas de Control de Concurrencia
 
-En la unidad anterior se estudió que una de las propiedades fundamentales de las transacciones es el aislamiento. Cuando se ejecutan varias transacciones concurrentemente en la base de datos, puede que deje de conservarse la propiedad de aislamiento. Es necesario que el sistema controle la interacción entre las transacciones concurrentes; dicho control se lleva a cabo a través de uno de los muchos mecanismos existentes llamado ***esquema de control de concurrencia***.
+En la unidad anterior se estudió que una de las propiedades fundamentales de las transacciones es el aislamiento. Cuando se ejecutan varias transacciones concurrentemente en la base de datos, puede que deje de conservarse la propiedad de aislamiento. Es necesario que el sistema controle la interacción entre las transacciones concurrentes; dicho control se lleva a cabo a través de uno de los muchos ***esquemas de control de concurrencia***.
 
-### Protocolos Basados en Bloqueos
+### Esquemas Basados en Bloqueos
 
-Consisten en permitir que una transacción acceda a un dato, sólo si tiene actualmente el bloqueo de ese dato. Existen varios modos de bloquear un dato, en primer lugar trataremos dos modos:
+Los esquemas basados en bloqueos consisten en permitir que una transacción acceda a un dato, solo si tiene actualmente el bloqueo de ese dato. Existen varios modos de bloquear un dato, pero nosotros abarcaremos el esquema más básico que consta de dos modos de bloqueo:
 
-- **Compartido (S)**: Si un transacción $T_i$ ha obtenido un bloqueo de un dato $Q$ en modo compartido, entonces $T_i$ puede leer el dato $Q$ pero no escribir $Q$.
-- **Exclusivo (X)**: Si la transacción $T_i$ obtuvo un bloqueo de un dato $Q$ en modo exclusivo, entonces solo $T_i$ puede leer y escribir $Q$.
+- **Compartido (S)**: Si una transacción $T_i$ ha obtenido un bloqueo de un dato $Q$ en modo compartido, entonces $T_i$ puede leer el dato $Q$ pero no escribir $Q$. Este modo permite que otras transacciones puedan acceder y leer el dato sin problema alguno.
+- **Exclusivo (X)**: Si la transacción $T_i$ obtuvo un bloqueo de un dato $Q$ en modo exclusivo, entonces solo $T_i$ puede leer y escribir $Q$. Este modo es el más restrictivo y permite que solo la transacción que bloqueo el dato pueda leer y modificar este mismo.
 
-El **Scheduler** es el componente encargado de asignar los recursos a las distintas transacciones y de gestionar el orden cronológico en que se ejecutan las instrucciones en el sistema de gestión de bases de datos. Este planificador de recibe un ***schedule de entrada***, que consiste en las diversas operaciones ordenadas cronológicamente según cómo el gestor de bases de datos recibe las instrucciones. El Scheduler procesa esta entrada y obteniendo un ***schedule de salida***, que es el orden cronológico resultante del control de concurrencia que realiza.
-Cuando una transacción desbloquea datos inmediatamente después de su último acceso, puede comprometer la serializabilidad de la transacción. Para evitar esto, se puede mantener el bloqueo en los datos hasta el final de la transacción, es decir, liberar los datos únicamente una vez que la transacción ha sido comprometida (Commit). Aunque esta estrategia preserva la serializabilidad de la transacción, puede dar lugar a otro problema de concurrencia conocido como **deadlock**.
+El **Scheduler** es el componente encargado de asignar los recursos a las distintas transacciones y de gestionar el orden cronológico en que se ejecutan las instrucciones en el sistema de gestión de bases de datos. Este planificador recibe un ***schedule de entrada***, que consiste en las diversas operaciones ordenadas cronológicamente según cómo el gestor de bases de datos recibe las instrucciones. El Scheduler procesa esta entrada y obteniendo un ***schedule de salida***, que es el orden cronológico resultante del control de concurrencia que realiza.
+Cuando una transacción desbloquea datos inmediatamente después de su último acceso, puede comprometer la serializabilidad de la transacción. Para evitar esto, se puede mantener el bloqueo en los datos hasta el final de la transacción, es decir, liberar los datos una vez que la transacción se haya comprometido. Aunque esta estrategia preserva la serializabilidad de la transacción, puede dar lugar a **interbloqueos**.
 
 #### Protocolos de Bloqueo de dos Fases
 
 Este protocolo requiere que todas las transacciones hagan sus solicitudes de bloqueo y desbloqueo en dos fases:
 
-1. **Fase de crecimiento**: Una transacción puede obtener bloqueos pero no puede liberar ninguno.
-2. **Fase de encogimiento**: Una transacción puede liberar bloqueos pero no puede solicitar ninguno nuevo.
+1. **Fase de crecimiento**: Una transacción puede obtener bloqueos, pero no puede liberar ninguno.
+2. **Fase de encogimiento**: Una transacción puede liberar bloqueos, pero no puede solicitar ninguno nuevo.
 
 
-Este protocolo garantiza la serializabilidad en conflictos, sin embargo no previene la aparición de situaciones de deadlock. Otro problema que puede surgir con este protocolo es el **retroceso en cascada** de varias transacciones. Esto ocurre debido a las **lecturas no comprometidas** (dirty reads), donde una transacción puede leer datos modificados por otra transacción que aún no se ha comprometido. Para solucionar este problema, se puede liberar los bloqueos exclusivos (exclusive locks) únicamente al realizar el commit de la transacción. Esta estrategia se conoce como **Read Committed** y evita que las transacciones lean datos que no han sido definitivamente guardados en la base de datos.
-Las ***conversiones de modos de bloqueo*** son una alternativa para aumentar la concurrencia en bases de datos, ya que algunas transacciones solo necesitan un bloqueo exclusivo al final de su ejecución.
+Este protocolo garantiza la serializabilidad en conflictos; sin embargo, no previene la aparición de interbloqueos. Otro problema que puede surgir con este protocolo es el ***retroceso en cascada*** de varias transacciones, esto ocurre debido a las ***lecturas no comprometidas*** o lecturas sucias (dirty reads), donde una transacción puede leer datos modificados por otra transacción que aún no ha sido comprometida. Para solucionar este problema, se puede liberar los bloqueos exclusivos únicamente cuando la transacción se compromete. Esta estrategia se conoce como ***Read Committed*** y evita que las transacciones lean datos que no han sido definitivamente guardados en la base de datos.
+Aunque esta técnica reduce los retrocesos en cascada, también disminuye la concurrencia, ya que algunas transacciones pueden quedar en espera de ciertos recursos. Las ***conversiones de modos de bloqueo*** en una técnica alternativa que aumenta la concurrencia en las bases de datos, puesto que existen transacciones que solo necesitan un bloqueo exclusivo al final de su ejecución. Esto introduce al protocolo dos nuevos métodos:
 
 - **Upgrade**: Conversión de un bloqueo en modo compartido a un bloqueo exclusivo.
 - **Downgrade**: Conversión de un bloqueo exclusivo a un bloqueo en modo compartido.
@@ -84,42 +84,41 @@ Estos protocolos garantizan la serializabilidad seleccionando por adelantado un 
 2. Para cualquier transacción $T_k$ que entra después de $T_i$, se cumple que $ts(T_i) < ts(T_k)$.
 3. La hora de entrada asignada a cada transacción determina el orden de serializabilidad, si $ts(T_i) < ts(T_k) \Rightarrow <T_i - T_k>$.
 
-Algunos métodos que se pueden utilizar para implementar este sistema son:
-
-1. Utilizar la hora del sistema como $ts$.
-2. Utilizar un contador lógico que se incremente después de asignar una nueva $ts$.
-
-Más alla del método utilizado para asignar los timestamp a cada transacción. Para implementara este sistema asociamos dos valores de $ts$ en cada dato $Q$.
+Algunos métodos para implementar las estampillas de tiempo incluyen el uso de la hora del sistema o la utilización de un contador lógico que se incrementa cada vez que se asigna una nueva $ts$. Generalmente, esta última opción es la más utilizada por las bases de datos.
+Más allá del método utilizado para asignar los marcas de tiempo a cada transacción. Para implementar este sistema de forma adecuada necesitas asociamos dos valores de $ts$ a cada dato $Q$.
 
 - $w-ts(Q)$: Representa la mayor $ts$ de cualquier transacción que ejecutó con éxito la operación de escritura en $Q$.
 - $r-ts(Q)$: Representa la mayor $ts$ de cualquier transacción que ejecutó con éxito la operación de lectura en $Q$.
 
-Estos datos se actualizan cada vez que se ejecuta una lectura o escritura en $Q$. De esta manera el protocolo garantiza que todas las operaciones de lectura y escritura que puedan entrar el conflicto se ejecuten de acuerdo al orden de $ts$.
+>[!note] Aclaración sobre la Actualización de la Estampilla de Tiempo de los Datos
+>Las estampillas de tiempo de lectura y escritura asociada a cada dato no siempre se actualiza cuando una transacción accede o modifica el dato en cuestión. Estas estampillas se actualizan únicamente si la transacción que modifico o accedio al dato es más nueva que la última transacción que realizó dicha acción.
+
+De esta manera el protocolo garantiza que todas las operaciones de lectura y escritura que puedan entrar el conflicto se ejecuten de acuerdo al orden de $ts$.
 Al igual que los algoritmos de bloqueo en dos fases, las lecturas no comprometidas pueden provocar un retraso en cascada, con la diferencia que en este caso se le agrega el problema de ***transacciones no recuperables***, ya que una transacción $T_i$ que leyó datos de una transacción $T_k$, no se puede comprometer hasta que no se comprometa $T_k$.
 
 >[!tldr] Regla de Escritura de Thomas
 >Las reglas de escritura de Thomas son un conjunto de reglas utilizadas en el control de concurrencia, estas reglas ayudan a manejar conflictos de escritura y lectura entre transacciones de manera eficiente. De forma resumida estas reglas dicen lo siguiente:
->- Si $ts(T_i) < r-ts(Q)$ la transacción debe abortarse porque estaría escribiendo en un dato que ya ha sido leído por una transacción posterior.
+>- Si $ts(T_i) < r-ts(Q)$ la transacción debe abortarse porque estaría escribiendo en un dato que ya ha sido leído por una transacción más joven.
 >- Si $ts(T_i) < w-ts(Q)$ la operación de escritura se descarta sin abortar la transacción porque el dato ya ha sido escrito por una transacción más reciente.
 >- Si ninguna de las condiciones anteriores se cumplen se realiza la escritura y se actualiza la estampilla de tiempo de escritura del dato.
 
-#### Mecanismos de Validación
+#### Mecanismos Optimistas
 
-Resulta conveniente utilizar un método de evaluación optimista en aquellos casos en que la mayoría de las transacciones son de sólo lectura, la tasa de conflictos entre las transacciones puede ser baja. Así, muchas de esas transacciones, si se ejecutasen sin la supervisión de un esquema de control de concurrencia, llevarían no obstante al sistema a un estado consistente. Aplicando métodos de alternativos de validación podemos disminuir la sobrecarga del sistema sin perder consistencia en la base de datos.
+En ocasiones particulares, como aquellas donde se realizan muchas más transacciones de lectura que de escritura, resulta conveniente utilizar un método de evaluación optimista, debido a que la tasa de conflictos entre las transacciones es baja. Así, muchas de esas transacciones, si se ejecutasen sin la supervisión de un esquema de control de concurrencia, llevarían no obstante al sistema a un estado consistente. Aplicando métodos alternativos de validación podemos disminuir la sobrecarga del sistema sin perder consistencia en la base de datos.
 La dificultad de reducir la sobrecarga está en que no se conocen de antemano las transacciones que estarán involucradas en un conflicto. Para obtener dicho conocimiento se necesita un esquema para supervisar el sistema.
-Por lo general cada transacción $T_i$ se ejecuta en dos o tres fases diferentes durante su tiempo de vida dependiendo de si es una transacción de sólo lectura o una de actualización. Las fases son las siguientes:
+Por lo general cada transacción $T_i$ se ejecuta en dos o tres fases diferentes durante su tiempo de vida dependiendo de si es una transacción de sólo lectura o una que involucra escrituras. Las fases son las siguientes:
 
 1. **Fase de lectura**: Durante esta fase tiene lugar la ejecución de la transacción $T_i$. Se leen los valores de varios elementos de datos y se almacenan en variables locales.
-2. **Fase de validación**: La transacción $T_i$ realiza una prueba de validación para determinar si puede copiar en la base de datos las variables locales temporales que tienen los resultados de las operaciones escribir sin causar una violación de la secuencialidad.
+2. **Fase de validación**: La transacción $T_i$ realiza una prueba de validación para determinar si puede copiar en la base de datos las variables locales temporales que tienen los resultados de las operaciones de escritura sin causar una violación de la secuencialidad.
 3. **Fase de escritura**: Si la transacción $T_i$ tiene éxito en la validación entonces las actualizaciones reales se aplican a la base de datos. En otro caso, $T_i$ retrocede.
 
-Para realizar la prueba de validación se necesita conocer el momento en que tienen lugar las distintas fases de las transacciones $T_i$ . Por lo tanto se asocian tres marcas temporales distintas a la transacción $T_i$ :
+Para realizar la prueba de validación se necesita conocer el momento en que tienen lugar las distintas fases de las transacciones $T_i$. Por lo tanto, se asocian tres marcas temporales distintas a la transacción $T_i$ :
 
-- $Ini(T_i)$: Hora de comenzó de $T_i$.
+- $Ini(T_i)$: Hora de comienzo de $T_i$.
 - $Val(T_i)$: Hora en la que $T_i$ terminó su fase de lectura y comenzó su fase de validación.
 - $Ter(T_i)$: Hora en la que $T_i$ terminó su fase de escritura.
 
-La comprobación de validación para la transacción $T_i$ exige que, para toda transacción $T_k$ con $ts(T_k) < ts(T_i)$, se cumplan una de las dos condiciones siguientes:
+El proceso de validación para la transacción $T_i$ exige que, para toda transacción $T_k$ con $ts(T_k) < ts(T_i)$, se cumplan una de las dos condiciones siguientes:
 
 1. $Ter(T_k) < Ini(T_i)$. Puesto que $T_k$ completa su ejecución antes de que comience $T_i$.
 2. El conjunto de todos los elementos de datos que escribe $T_k$ tiene intersección vacía con el conjunto de elementos de datos que lee $T_i$ , y $T_k$ completa su fase de escritura antes de que $T_i$ comience su fase de validación.
@@ -128,19 +127,19 @@ El esquema de validación evita automáticamente los retrocesos en cascada, ya q
 
 ### Esquemas Multiversión
 
-Los esquemas de control de concurrencia tratados hasta aquí, garantizan la serializabilidad retrasando la transacción o bien abortando la transacción que solicitó la operación. Este problema puede evitarse si se mantiene las copias antiguas de todos los datos en el sistema.
-En los sistema multiversión cada operación de escritura sobre $Q$ crea una nueva versión del dato $Q$. Cuando se realiza una operación de lectura sobre este dato, el sistema selecciona una de las versiones de $Q$ para leerse.
-La técnica más utilizada para los esquema multiversión es la de estampillas de tiempo, en donde a cada dato $Q$ se le asocia una secuencia de versiones $<Q_1, Q_2, \cdots, Q_N>$, donde cada versión $Q_k$ contiene tres campos de información:
+Los esquemas de control de concurrencia tratados hasta aquí, garantizan la serializabilidad retrasando la transacción o bien abortando la transacción que solicitó una operación. Este problema puede evitarse si se mantiene las copias antiguas de todos los datos en el sistema.
+En los sistemas multiversión cada operación de escritura sobre $Q$ crea una nueva versión del dato $Q$. Cuando se realiza una operación de lectura sobre este dato, el sistema selecciona una de las versiones de $Q$ para leerse.
+La técnica más utilizada para los esquemas multiversión es la de estampillas de tiempo, en donde a cada dato $Q$ se le asocia una secuencia de versiones $<Q_1, Q_2, \cdots, Q_N>$, donde cada versión $Q_k$ contiene tres campos de información:
 
 - **Contenido**: Valor de la versión $Q_k$.
 - $w-ts(Qk)$: estampilla de tiempo de la transacción que creó la versión $Q_k$.
-- $r-ts(Qk)$: estampilla de tiempo de la transacción más joven que haya leído con éxito la versión $Q_k$.
+- $r-ts(Qk)$: estampilla de tiempo de la transacción más joven que leyó con éxito la versión $Q_k$.
 
 Una transacción $T_i$ crea una versión $Q_k$ del dato $Q$, cuando ejecuta la operación de escritura sobre $Q$. El campo contenido tendrá el valor que escribió $T_i$ y $w-ts(Q_k) = r-ts(Q_k) = ts(T_i)$. El valor $r-ts(Q_k)$ puede modificarse cuando una transacción $T_j$ lee $Q_k$ y $r-ts(Q_k) < ts(T_j)$.
 Si una operación $T_i$ solicita una operación de lectura o escritura sobre $Q$, y $Q_k$ es una versión de $Q$ cuya $ts$ de escritura es la $ts$ más grande, menor que $ts(T_i)$, entonces se lleva a cabo una de las siguientes operaciones:
 
 1. Si $T_i$ quiere realizar una lectura sobre $Q$, entonces el valor devuelto es el contenido de la versión $Q_k$.
-2. Si $T_i$ quiere realizar una operación de lectura sobre $Q$, y $ts(T_i) < r-ts(Q_k)$, entonces la transacción $T_i$ retrocede; en caso contrario se crea una nueva versión $Q_i$.
+2. Si $T_i$ quiere realizar una operación de escritura sobre $Q$, y $ts(T_i) < r-ts(Q_k)$, entonces la transacción $T_i$ retrocede; en caso contrario se crea una nueva versión $Q_i$.
 
 La justificación de la primera operación es clara. Una transacción lee la versión más reciente que viene antes de ella en el tiempo. La segunda regla fuerza a que se aborte una transacción que realice una escritura tardía de $Q$. Siendo más precisos, si $T_i$ intenta escribir una versión que alguna otra transacción haya leído, entonces no se puede permitir que dicha escritura tenga éxito.
 
@@ -151,27 +150,27 @@ La justificación de la primera operación es clara. Una transacción lee la ver
 >	- La lectura de un dato tiene también que actualizar $r-ts(Q_k)$, que resulta en dos accesos potenciales a disco en vez de uno.
 >	- Los conflictos entre transacciones se resuelven a través de retrocesos en lugar de esperas, lo que puede llegar a generar un retroceso en cascada.
 
-## Inserciones y Supreciones
+## Inserciones y Supresiones de Datos
 
-Algunas transacciones, no sólo requieren accesos a datos que ya existen, sino también la posibilidad de crear nuevos datos o eliminar datos, en este caso deberemos contemplar estas dos nuevas operaciones:
+Algunas transacciones, no solo requieren accesos a datos que ya existen, sino también la posibilidad de crear nuevos datos o eliminar datos, en este caso deberemos contemplar estas dos nuevas operaciones:
 
-- $delete(Q)$: elimina al dato $Q$ de la base de datos.
-- $insert(Q)$: inserta un nuevo dato $Q$ a la base de datos y le da una valor inicial.
+- $delete(Q)$: Elimina el dato $Q$ de la base de datos.
+- $insert(Q)$: Inserta un nuevo dato $Q$ a la base de datos y le da un valor inicial.
 
-Sean $I_i$ e $I_k$ instrucciones de las transacciones $T_i$ y $T_k$ respectivamente, que aparecen en un cronograma $S$ en orden consecutivo. Sea $I_i = delete(Q)$ una instrucción a ejecutar.
+Sean $I_i$ e $I_k$ instrucciones de las transacciones $T_i$ y $T_k$ respectivamente, que aparecen en un cronograma $S$ en orden consecutivo. Sea $I_i = delete(Q)$ una instrucción a ejecutar, se pueden dar una de las siguientes situaciones:
 
-- $I_k = read(Q)$: $I_i$ e $I_k$ tienen conflictos. Si $I_i$ viene antes de $I_k$, $T_k$ tendrá un error lógico, ya que ese registro ya habrá sido eliminado. Si $I_k$ viene antes de $I_i$, $T_k$ puede ejecutar la operación de lectura con éxito.
-- $I_k = write(Q)$: $I_i$ e $I_k$ tienen conflictos. Si $I_i$ viene antes de $I_k$, $T_k$ tendrá un error lógico, ya que ese registro ya habrá sido eliminado. Si $I_k$ viene antes de $I_i$, $T_k$ puede ejecutar la operación de escritura con éxito.
-- $I_k = delete(Q)$: $I_i$ e $I_k$ tienen conflictos. Si $I_i$ viene antes de $I_k$, $T_k$ tendrá un error lógico, ya que ese registro ya habrá sido eliminado. Si $I_k$ viene antes de $I_i$, $T_k$ puede ejecutar la operación de eliminación con éxito, pero ahora arrojará error $T_i$.
-- $I_k = insert(Q)$: $I_i$ e $I_k$ tienen conflictos. Si $Q$ no existe antes de las ejecuciones de $I_i$ e $I_k$, entonces si $I_i$ se ejecuta antes de $I_k$, $T_i$ producirá un error lógico porque intentará eliminar un registro que no existe. Sin embargo, si $I_k$ se ejecuta antes de $I_i$, esto no ocurrirá. Por otro lado, si $Q$ existía antes de las ejecuciones de $I_i$ e $I_k$, se producirá un error lógico si $I_k$ se ejecuta antes de $I_i$ porque $I_k$ intentará insertar un registro que ya existe, en caso contrario no ocurrirá ningún error.
+- Si $I_k = read(Q)$ entonces $I_i$ e $I_k$ tienen conflictos solo si $I_i$ viene antes de $I_k$. $T_k$ tendrá un error lógico, ya que ese registro ya habrá sido eliminado.
+- Si $I_k = write(Q)$ entonces $I_i$ e $I_k$ tienen conflictos solo si $I_i$ viene antes de $I_k$. $T_k$ tendrá un error lógico, porque el registro ya habrá sido eliminado.
+- Si $I_k = delete(Q)$ entonces $I_i$ e $I_k$ tienen conflictos si $I_i$ viene antes de $I_k$. $T_k$ tendrá un error lógico, puesto que el registro ya habrá sido eliminado. Lo mismo ocurre si $I_k$ viene antes de $I_i$.
+- Si $I_k = insert(Q)$ entonces $I_i$ e $I_k$ tienen conflictos, porque si $Q$ no existe antes de las ejecuciones de $I_i$ e $I_k$, entonces si $I_i$ se ejecuta antes de $I_k$, $T_i$ producirá un error lógico porque intentará eliminar un registro que no existe. Sin embargo, si $I_k$ se ejecuta antes de $I_i$, esto no ocurrirá. Por otro lado, si $Q$ existía antes de las ejecuciones de $I_i$ e $I_k$, se producirá un error lógico si $I_k$ se ejecuta antes de $I_i$ porque $I_k$ intentará insertar un registro que ya existe, en caso contrario no ocurrirá ningún error.
 
-La forma de hacer frente a estos conflictos va a depender del protocolo utilizado por la base de datos para manejar la concurrencia, en caso de emplear un bloqueo de dos fases el registro debe tener un bloqueo exclusivo en ese dato antes de poder realizar la eliminación. En cambio, en caso de emplear ordenación por hora de entrada se debe realizar una prueba similar a la que se realiza con la operación de escritura:
+La forma de hacer frente a estos conflictos va a depender del protocolo utilizado por la base de datos para manejar la concurrencia, en caso de emplear un bloqueo de dos fases el registro debe tener un bloqueo exclusivo en ese dato antes de poder realizar la eliminación. En cambio, en caso de emplear un equema basado en hora de entrada se debe realizar una prueba similar a la que se realiza con la operación de escritura:
 
 - Si $ts(T_i) < r-ts(Q)$, se rechaza la eliminación y $T_i$ retrocede. Esto es porque el valor de $Q$ que $T_i$ iba a suprimir, ya ha sido leído por una transacción $T_j$ con $ts(T_j) > ts(T_i)$.
 - Si $ts(T_i) < w-ts(Q)$, se rechaza la eliminación y $T_i$ retrocede. Esto es porque una transacción $T_j$ con $ts(T_j) > ts(T_i)$ ha escrito $Q$.
-- Si $T_i \geq w-ts(Q)$ y $T_i \geq r-ts(Q)$, la operación de eliminación se ejecutara sin problema alguno.
+- Si $T_i \geq w-ts(Q)$ y $T_i \geq r-ts(Q)$ la operación de eliminación se ejecutara sin problema alguno.
 
-Por su parte, la operación inserción tiene conflictos con las operaciones de lectura, escritura y eliminación, dado que no se puede realizar estas operaciones si el dato sobre el cual operar no existe. Dado que las inserciones le asigna un valor a $Q$, este se trata igual que la operación escritura para propósitos de control de concurrencia. Bajo el protocolo de bloqueo de dos fases, si $T_i$ realiza una operación de inserción, a $T_i$, se le da un bloqueo exclusivo en el dato $Q$ recién creado. Mientras que bajo el protocolo de ordenación por hora de entrada, si $T_i$ realiza la operación de inserción, los valores $r-ts(Q)$ y $w-ts(Q)$ se ponen en $ts(T_i)$.
+Por su parte, la operación inserción tiene conflictos con las operaciones de lectura, escritura y eliminación, dado que no se puede realizar estas operaciones si el dato sobre el cual se opera no existe. Dado que las inserciones le asigna un valor a $Q$, este se trata igual que la operación escritura para propósitos de control de concurrencia. Bajo el protocolo de bloqueo de dos fases, si $T_i$ realiza una operación de inserción, a $T_i$ se le da un bloqueo exclusivo en el dato $Q$ recién creado. Mientras que bajo el protocolo de ordenación por hora de entrada, si $T_i$ realiza la operación de inserción, los valores $r-ts(Q) = w-ts(Q) = ts(T_i)$, es decir, los valores de lectura y escritura para el nuevo dato son el mismo que la transacción que la introdujo a la base de datos.
 
 ### Fenómeno Fantasma
 
@@ -195,7 +194,7 @@ Sea $P$ un cronograma que involucra a $T_k$ y $T_j$. Se espera que haya un confl
 2. Si $T_k$ no utiliza la tupla que ha insertado recientemente $T_j$ para calcular la suma de los saldos, entonces en un cronograma serializable equivalente a $P$, $T_k$ debe ir antes de $T_j$.
 
 En el segundo caso $T_k$ y $T_j$ no acceden a ninguna tupla común, y sin embargo ambas transacciones están en conflicto por una tupla fantasma. Si bien este conflicto no es detectado si se realiza el control de concurrencia con granularidad de tupla, esto es un problema para el resto de métodos.
-Este problema recibe el nombre de ***fenómeno fantasma***. Para evitar este fenómeno se permite que $T_k$ impida a otras transacciones crear nuevas tuplas en la relación *cuenta* cuyo campo nombre_sucursal sea Concordia. Aun así, la solución más simple a este problema consiste en bloquear la relación *cuenta* en modo compartido.
+Este problema recibe el nombre de ***fenómeno fantasma***. Para evitar este fenómeno se permite que $T_k$ impida a otras transacciones crear nuevas tuplas en la relación *cuenta* cuyo campo `nombre_sucursal` sea Concordia. Aun así, la solución más simple a este problema consiste en bloquear la relación `cuenta` en modo compartido.
 En este caso las transacciones como $T_k$ , que lean tuplas pertenecientes a la relación cuenta, tendrían que bloquear el elemento de datos correspondientes a la relación en modo compartido. Mientras que las transacciones como $T_j$, que actualicen tuplas pertenecientes a la relación cuenta, tendrían que bloquear el elemento de datos en modo exclusivo. De este modo $T_k$ y $T_j$ tendrían un conflicto en un elemento de datos real, en lugar de tenerlo en uno fantasma, con el inconveniente de que baja el grado de concurrencia, ya que se impide que dos transacciones que inserten distintas tuplas en la relación se ejecuten concurrentemente.
 Otra solución es utilizar el ***protocolo de bloqueo de índice***. Sea una transacción Ti, el protocolo opera de la siguiente manera:
 
