--- a/4º Año/Bases de Datos/Unidad 10/2. Granularidad y Aislamiento.md
+++ b/4º Año/Bases de Datos/Unidad 10/2. Granularidad y Aislamiento.md
@@ -1,10 +1,10 @@
-Si $T_i$ necesita bloquear todos los registros de la base de datos, utilizar un protocolo de bloqueo consumiría mucho tiempo, convendría que $T_i$ utilice un solo bloqueo para toda la base de datos. Si $T_i$ necesita sólo unos cuantos registros y se bloquea toda la base de datos, se perdería mucha concurrencia, lo que se necesita es un mecanismo que le permita definir al sistema múltiples niveles de granularidad. Para esto, se debe definir una jerarquía de granularidades de los datos, como se ve en la imagen.
+Si $T_i$ necesita bloquear todos los registros de la base de datos, utilizar un protocolo de bloqueo consumiría mucho tiempo, convendría que $T_i$ utilice un solo bloqueo para toda la base de datos. Si $T_i$ necesita solo unos cuantos registros y se bloquea toda la base de datos, se perdería mucha concurrencia, lo que se necesita es un mecanismo que le permita definir al sistema múltiples niveles de granularidad. Para esto, se debe definir una jerarquía de granularidades de los datos, como se ve en la imagen.
 
 ![[granularidad-multinivil.png]]
 
 Cuando una transacción bloquea un nodo ya sea en modo **S** o **X**, esto implica que la transacción bloquea también a todos sus descendientes en el mismo modo.
 Supongamos que una transacción $T_i$ bloque el nodo $F_a$ en modo compartido, implícitamente está bloqueando todos sus descendientes del mismo modo. Si la transacción $T_j$ desea bloquear alguna tupla hija de $F_a$ en modo exclusivo, se generará un conflicto.
-Para determinar si un nodo puede ser bloqueado o no $T_j$ debe recorrer el camino desde la raíz del árbol hasta el registro que desea bloquear. Si cualquier nodo en el camino está bloqueado en modo incompatible, entonces $T_j$ debe esperar. Supongamos que $T_k$ desea bloquear toda la base de datos, para hacerlo debe bloquear solamente la raíz del árbol, sin embargo $T_k$ no tendría éxito porque $T_i$ tiene actualmente bloqueado $F_a$. Una forma más eficiente de saber si se puede bloquear un nodo de niveles superiores es a través de un nuevo modo de bloqueo denominado ***modo de bloqueo intencional***. 
+Para determinar si un nodo puede ser bloqueado o no $T_j$ debe recorrer el camino desde la raíz del árbol hasta el registro que desea bloquear. Si cualquier nodo en el camino está bloqueado en modo incompatible, entonces $T_j$ debe esperar. Supongamos que $T_k$ desea bloquear toda la base de datos, para hacerlo debe bloquear solamente la raíz del árbol, sin embargo, $T_k$ no tendría éxito porque $T_i$ tiene actualmente bloqueado $F_a$. Una forma más eficiente de saber si se puede bloquear un nodo de niveles superiores es a través de un nuevo modo de bloqueo denominado ***modo de bloqueo intencional***. 
 Si un nodo se bloquea en modo intencional se está haciendo un bloqueo explícito en un nivel inferior del árbol. Los bloqueos intencionales se colocan en todos los ascendientes de un nodo antes de bloquearlo explícitamente, de este modo no es necesario que una transacción busque en todo el árbol para determinar si puede bloquear un nodo con éxito. Una transacción que quiera bloquear $Q$ debe recorrer el camino en el árbol desde la raíz hasta $Q$. Durante el recorrido del árbol la transacción bloquea los distintos nodos en un modo intencional.
 
 >[!tldr] Modos de Intensión Asociados a Estados de Bloqueo
@@ -13,7 +13,7 @@ Si un nodo se bloquea en modo intencional se está haciendo un bloqueo explícit
 > - **Modo Intencional-Exclusivo (IX)**: Se realiza un bloqueo explícito en un nivel inferior con bloqueos en modo exclusivo o en modo compartido.
 > - **Modo Intencional-Exclusivo y Compartido(SIX)**: Se realiza un bloqueo en modo exclusivo del subárbol cuya raíz sea el nodo especificado, y dicho bloqueo explícito se produce en un nivel inferior con bloqueos en modo exclusivo.
 
-## Granularidad Múltiple
+## Protocolo de Bloqueo de Granularidad Múltiple
 
 El ***protocolo de bloqueo de granularidad múltiple*** siguiente asegura la secuencialidad. En este protocolo cada transacción $T_i$ puede bloquear un nodo $Q$ usando las reglas siguientes:
 
@@ -28,30 +28,30 @@ El ***protocolo de bloqueo de granularidad múltiple*** siguiente asegura la sec
 | X   | Falso     | Falso     | Falso     | Falso     | Falso     |
 
 2. Debe bloquear la raíz del árbol en primer lugar y puede bloquearla en cualquier modo.
-3. Puede bloquear un nodo $Q$ en modo **C** o **IC** sólo si está bloqueando actualmente al padre de $Q$ en modo **IX** o **IC**.
-4. Puede bloquear un nodo $Q$ en modo **X**, **IXC** o **IX** sólo si está bloqueando actualmente al padre de $Q$ en modo **IX** o **IXC**.
-5. Puede bloquear un nodo sólo si no ha desbloqueado previamente ningún nodo, es decir, $T_i$ es de dos fases.
-6. Puede desbloquear un nodo $Q$ sólo si no ha bloqueado a ninguno de los hijos de $Q$.
+3. Puede bloquear un nodo $Q$ en modo **C** o **IC** solo si está bloqueando actualmente al padre de $Q$ en modo **IX** o **IC**.
+4. Puede bloquear un nodo $Q$ en modo **X**, **IXC** o **IX** solo si está bloqueando actualmente al padre de $Q$ en modo **IX** o **IXC**.
+5. Puede bloquear un nodo solo si no ha desbloqueado previamente ningún nodo, es decir, $T_i$ es de dos fases.
+6. Puede desbloquear un nodo $Q$ solo si no ha bloqueado a ninguno de los hijos de $Q$.
 
-Obsérvese que en el protocolo de granularidad múltiple es necesario que se adquieran los bloqueos en *orden descendente*, y que se liberen en *orden ascendente*. Este protocolo permite la concurrencia y reduce la sobrecarga de bloqueos. Es particularmente útil en las aplicaciones con una mezcla de transacciones cortas que sólo acceden a algunos elementos de datos y transacciones largas que producen informes a partir de un archivo completo o un conjunto de archivos.
+Obsérvese que en el protocolo de granularidad múltiple es necesario que se adquieran los bloqueos en *orden descendente*, y que se liberen en *orden ascendente*. Este protocolo permite la concurrencia y reduce la sobrecarga de bloqueos. Es particularmente útil en las aplicaciones con una mezcla de transacciones cortas que solo acceden a algunos elementos de datos y transacciones largas que producen informes a partir de un archivo completo o un conjunto de archivos.
 
 ## Niveles de Aislamiento
 
 La definición de transacción SQL es parecida a nuestro concepto de transacción ya definido. Es decir, es una unidad lógica de trabajo cuya atomicidad está garantizada. Una simple sentencia SQL se considera que siempre es atómica. En SQL no hay ninguna sentencia de inicio de transacción explícita, sin embargo, cada transacción debe tener una sentencia explícita de terminación, que puede ser `COMMIT` o `ROLLBACK`.
 Una transacción tiene ciertas características atribuibles a ella, que se especifican en SQL mediante la sentencia `SET TRANSACTION`, estas características son las siguientes:
 
-- **Modo de acceso**: Permite indicar los permisos que tendrá esa transacción a la hora de su ejecución. Contamos con solo dos modos de acceso, el ***modo de solo lectura*** y el ***modo de lectura-escritura***. El primer modo solo le permite a las transacciones acceder a los datos, mientras que la segundo permite realizar todas las operaciones CRUD.
-- **Tamaño del área de deagnóstico**: Especifica un valor entero $n$ que indica el número de condiciones que se pueden mantener simultáneamente en el área de diagnóstico. Estas condiciones proporcionan retroalimentación sobre errores o excepciones ocurridas en la sentencia SQL recién ejecutada.
+- **Modo de acceso**: Permite indicar los permisos que tendrá esa transacción a la hora de su ejecución. Contamos con solo dos modos de acceso, el ***modo de solo lectura*** y el ***modo de lectura-escritura***. El primer modo solo le permite a las transacciones acceder a los datos, mientras que el segundo permite realizar todas las operaciones CRUD.
+- **Tamaño del área de diagnóstico**: Especifica un valor entero $n$ que indica el número de condiciones que se pueden mantener simultáneamente en el área de diagnóstico. Estas condiciones proporcionan retroalimentación sobre errores o excepciones ocurridas en la sentencia SQL recién ejecutada.
 - **Nivel de aislamiento**: Controlan cómo y cuándo los cambios realizados por una transacción son visibles a otras transacciones. Existen cuatro niveles de aislamiento principales:
 	1. **Read Uncommitted**: Las transacciones pueden leer datos no confirmados por otras transacciones, lo que puede llevar a lecturas sucias.
-	2. **Read Committed**: Las transacciones solo pueden leer datos confirmados. Evita lecturas sucias pero permite lecturas irrepetibles.
-	3. **Repeatable Read**: Las transacciones garantizan que si se leen datos una vez, esos datos no cambiarán si se leen nuevamente en la misma transacción. Evita lecturas irrepetibles pero puede permitir lecturas fantasma.
+	2. **Read Committed**: Las transacciones solo pueden leer datos confirmados. Evita lecturas sucias, pero permite lecturas irrepetibles.
+	3. **Repeatable Read**: Las transacciones garantizan que si se leen datos una vez, esos datos no cambiarán si se leen nuevamente en la misma transacción. Evita lecturas irrepetibles, pero puede permitir lecturas fantasma.
 	4. **Serializable**: El nivel más estricto. Las transacciones se ejecutan de forma que parece que se ejecutaron secuencialmente, una después de otra. Evita lecturas sucias, lecturas no repetibles y lecturas fantasma.
 
-La siguiente imagen mientra en un cuadro los tipos de violaciones que pueden suceder en cada nivel de aislamiento.
+La siguiente imagen muestra los tipos de violaciones que pueden suceder en cada nivel de aislamiento.
 
 ![[tipo-violaciones.png]]
 
->[!example] Lecturas Irrepetiples
->Supongamos que existen dos transacciones, $T_1$ y $T_2$, y que $T_1$ lee uno o más registros de una tabla, si $T_2$ actualiza alguno de esos registros que $T_1$ había leído previamente y luego $T_1$ vuelve a leer los mismos registros, encontrará valores diferentes. Este fenómeno se conoce como ***lectura no repetible***.
+>[!example] Lecturas Irrepetibles
+>Supongamos que existen dos transacciones, $T_1$ y $T_2$, y que $T_1$ lee uno o más registros de una tabla, si $T_2$ actualiza alguno de esos registros que $T_1$ había leído previamente y luego $T_1$ vuelve a leer los mismos registros, encontrará valores diferentes. Este fenómeno se conoce como ***lectura irrepetible***.
 
