--- a/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
+++ b/4º Año/Bases de Datos/Unidad 9/1. Transacciones.md
@@ -1,14 +1,15 @@
-Una transacción es una unidad de programa que accede y posiblemente actualiza varios elementos de información. Una transacción puede contener única sentencia SQL o varias de estas.
-Las transacciones poseen las siguientes propiedades:
+Una transacción es una unidad de programa que accede y posiblemente actualiza varios elementos de información. Una transacción puede contener única sentencia SQL o varias de estas. Las transacciones poseen las siguientes propiedades:
 
 - **Atomicidad**: Los cambios provocados por una transacción o se completan todos (commit), o se deshacen todos (rollback).
 - **Consistencia**: Las bases de datos asegura que cualquier transacción llevará a la base de datos de un estado válido a otro estado válido, manteniendo siempre las reglas de integridad definidas.
 - **Aislamiento**: Los resultados de una transacción son invisibles para el resto de transacciones de otros procesos hasta que la transacción sea completada.
 - **Durabilidad**: Una vez una transacción ha sido completada, los resultados, es decir, los cambios de la transacción se hacen permanentes.
 
+Las transacciones en los sistemas de gestión de bases de datos se pueden implementar de dos formas distintas, mediante el uso de bitácoras o a través de un mecanismo de doble paginación.
+
 ## Fallos en las Transacciones
 
-En el contexto de las transacciones en bases de datos, existen dos tipos principales de pérdidas de información:
+En el contexto de las transacciones en bases de datos, existen dos tipos principales de fallos cuando se están ejecutando las transacciones:
 
 1. **Con pérdida de información**: Se refiere a situaciones en las que, debido a alguna circunstancia, se pierde información que no puede ser recuperada.
 2. **Sin pérdida de información**: Se refiere a situaciones en las que, a pesar de algún inconveniente, la información no se pierde y puede ser recuperada.
@@ -25,6 +26,8 @@ Por otro lado, existen diferentes tipos de fallos que pueden ocurrir durante el 
 - **Caída del sistema**: El hardware funciona mal, causando la pérdida del contenido del almacenamiento volátil.
 - **Fallo de disco**: Un bloque de disco pierde su contenido debido a la rotura de la cabeza o fallos durante la transmisión de información.
 
+### Implementación de Transacciones Mediante Bitácoras
+
 Los fallos producidos al momento de realizar transacciones pueden ser recuperados utilizando bitácoras, también conocidos como ***Log Files***, estas bitácoras describen de forma única la estructura de la base de datos, cada uno de los registros que componen las bitácoras consta de los siguientes campos:
 
 - **Nombre de la transacción**: El nombre único de la transacción que ejecutó la operación de escritura.
@@ -33,58 +36,59 @@ Los fallos producidos al momento de realizar transacciones pueden ser recuperado
 - **Valor nuevo**: Valor del dato después de la escritura.
 - **Otros registros**: Graban procesos especiales durante la transacción: $<T_i \ Starts>$ comienzo de una transacción, $<T_i \ Commits>$ el cometido y $<T_i \ Abort>$ el aborto de una transacción.
 
-En las bitácoras cada vez que se inicia una transacción se registra esta misma de la siguiente manera $<T_i \ Starts>$, posteriormente asientan en el archivo los registros modificados, como ya hemos mencionado anteriormente los registros en los logs files poseen la siguiente estructura $<T_i, X_j, V_1, V_2>$, donde $T_i$ es la transacción en la que se realiza la operación de escritura, $X_j$ es el registro que se actualizó, $V_1$ es el valor antiguo de dicho registro y $V_2$ es el nuevo valor que este poseerá luego de la escritura. Una vez asentados todos los registros que fueron actualizados se indica en el archivo la finalización de la transacción con el siguiente registro $< T_i \ Commits>$.
+En las bitácoras cada vez que una transacción $T_i$ inicia se registra esta misma mediante un registro $<T_i \ Starts>$, posteriormente asientan en el archivo los registros modificados por esta transacción, como ya hemos mencionado anteriormente los registros en los logs files poseen la siguiente estructura $<T_i, X_j, V_1, V_2>$, donde $T_i$ es la transacción que realiza la operación de escritura, $X_j$ es el registro que se actualizó, $V_1$ es el valor antiguo de dicho registro y $V_2$ es el nuevo valor que este poseerá luego de la escritura. Una vez asentados todos los registros que fueron actualizados se indica en el archivo la finalización de la transacción con el siguiente registro $< T_i \ Commits>$.
 Las modificaciones que se realizan dentro de las transacciones pueden realizarse de dos maneras:
 
 1. **Modificación Inmediata**: Permite las modificaciones no comprometidas, grabando las modificaciones en las bases de datos, mientras la transacción está todavía en estado activo. Antes que $T_i$ comience su ejecución el registro $<T_i \ Starts>$ se escribe en la bitácora. Durante su ejecución cualquier operación de escritura que haga $T_i$, se escribe primero en la bitácora y luego en las bases de datos. Cuando $T_i$ esté parcialmente comprometida se grabará el registro $<T_i \ Commits>$ en la bitácora.
 
 >[!tldr] Recuperación de Datos - Modificación Inmediata
->El esquema de recuperación utiliza dos procedimientos:
->- **undo($T_i$)**: Restaura todos los datos que $T_i$ actualiza a los valores que tenían anteriormente para todos los $T_i$ que no tengan el registro $<T_i \ Commits>$.
+>Cuando una transacción falla en un sistema que utiliza modificación inmediata, el esquema de recuperación utiliza dos procedimientos:
+>- **undo($T_i$)**: Restaura todos los datos que $T_i$ actualizó a sus valores anteriormente, para todos los $T_i$ que no tengan el registro $<T_i \ Commits>$.
 >- **redo($T_i$)**: Asigna los nuevos valores a todos los datos que actualiza la operación $T_i$, para todos los $T_i$ que tengan el registro $<T_i \ Commits>$.
 
-2. **Modificación Diferida**: Garantiza la atomicidad de las transacciones de la base de datos, ya que graba todas las modificaciones de la base de datos en la bitácora, postergando la ejecución de todas las operaciones escritura de una transacción hasta que el registro $<T_i \ Commits>$ esté guardado en memoria estable.
+2. **Modificación Diferida**: Garantiza la atomicidad de las transacciones de la base de datos, ya que graba todas las modificaciones de la base de datos en la bitácora, postergando la ejecución de todas las operaciones de escritura de una transacción hasta que el registro $<T_i \ Commits>$ esté guardado en memoria estable. Es decir, solo realiza las escritura de los datos una vez que la transacción se haya comprometido.
 
 >[!tldr] Recuperación de Datos - Modificación Diferida
-> El procedimiento de recuperación es el siguiente:
-> - **redo($T_i$)**: que asigna los nuevos valores a todos los datos que actualiza la transacción $T_i$. Para todos los $T_i$, que tienen el registro $<T_i \ Commits>$ en la bitácora.
+> Cuando una transacción falla en un sistema que utiliza modificación en diferido, el esquema de recuperación solo utiliza un único procedimiento:
+> - **redo($T_i$)**: Asigna los nuevos valores a todos los datos que actualiza la transacción $T_i$, para todos los $T_i$, que tienen el registro $<T_i \ Commits>$ en la bitácora.
 
-## Gestión de Registros Intermedios
+#### Gestión de Registros Intermedios
 
 La grabación en disco de los registros se hace en unidades de bloques, pero en la mayoría de los casos un registro de bitácora es mucho más pequeño que un bloque. Además, la grabación de un bloque en memoria estable, puede corresponder a varias operaciones de grabación a nivel físico, esto hace que sea conveniente grabar varios registros de bitácora de una sola vez, debido a que se tiene que cumplir con los requisitos de atomicidad y durabilidad.
 Para garantizar la atomicidad en las transacciones, es necesario seguir un orden específico en la grabación de los registros de bitácora:
 
-1. Antes de que se grabe en memoria estable el registro de bitácora $<T_i \ Commits>$ de una transacción $T_i$, deben haberse grabado previamente en memoria estable todos los registros de bitácora correspondientes a $T_i$.
+1. Antes de que se grabe en disco el registro de bitácora $<T_i \ Commits>$ de una transacción $T_i$, deben haberse grabado previamente en memoria estable todos los registros de bitácora correspondientes a $T_i$.
 2. Una vez que el registro $<T_i \ Commits>$ se haya grabado en disco, esto asegura que todas las acciones de la transacción $T_i$ están registradas de manera estable.
 3. Antes de grabar en la base de datos un bloque que está en memoria principal, deben haberse grabado en disco todos los registros de bitácora que contienen los cambios de los datos de ese bloque.
 
 Este proceso asegura que todos los cambios realizados por una transacción se registran de manera segura y ordenada, manteniendo así la atomicidad de las transacciones.
 Por otro lado, para garantizar la durabilidad de las transacciones, es fundamental tener en cuenta que la memoria principal es mucho más pequeña que la memoria secundaria. Además, el intercambio de datos entre estas dos memorias puede ser costoso en términos de tiempo. Adicionalmente, si no hay espacio disponible en los buffers intermedios para cargar un bloque, será necesario eliminar alguno de los bloques que se encuentran en la memoria principal. Es por esta razón que algunos sistemas de gestión de bases de datos implementan su buffer dentro de la memoria virtual del sistema operativo. La base de datos en sí se almacena en un sistema de archivos del sistema operativo, mientras que este último gestiona las transferencias entre los archivos, la base de datos y el registro intermedio en memoria virtual. Esto asegura que se cumplan los requisitos de durabilidad mencionados anteriormente.
-Generalmente, los gestores de bases de datos reservan parte de la memoria principal para utilizarla como buffers que ellos mismos gestionan, en lugar del sistema operativo. Esto se logra llamando a rutinas de bajo nivel del sistema operativo.
+Generalmente, los gestores de bases de datos reservan parte de la memoria principal para utilizarla como buffers que ellos mismos gestionan, en lugar del sistema operativo. Esto es así, ya que las bases de datos manejan conceptos tales como bloques clavados y salidas forzadas, conceptos los cuales no son entendidos por los sistemas operativos, en parte porque no fueron diseñados para llevar a cabo este tipo de tareas.
 
-## Puntos de Verificación
+#### Puntos de Verificación
 
-Ante un fallo en el sistema es necesario consultar la bitácora para determinar cuáles son las transacciones que deben rehacerse y cuáles necesitan deshacerse. El proceso de búsqueda consume tiempo y la mayor parte de las transacciones que, según el algoritmo, necesitan volver a hacerse ya escribieron sus actualizaciones en la base de datos, si bien volver a hacerlas no cause daño, prolonga el proceso de recuperación. Es por eso que periódicamente o cuando ocurre un fallo, el sistema lleva a cabo el siguiente conjunto de acciones:
+Ante un fallo en el sistema es necesario consultar la bitácora para determinar que transacciones deben rehacerse y cuáles necesitan deshacerse. El proceso de búsqueda consume tiempo y la mayor parte de las transacciones que, según el algoritmo, necesitan volver a hacerse ya escribieron sus actualizaciones en la base de datos, si bien volver a hacerlas no cause daño, prolonga el proceso de recuperación. Es por eso que periódicamente o cuando ocurre un fallo, el sistema lleva a cabo el siguiente conjunto de acciones:
 
 1. Graba en disco todos los registros de bitácora que actualmente residen en memoria principal.
 2. Graba en disco los bloques modificados de registros intermedios.
 3. Graba un registro de $<Checkpoint>$ en la bitácora.
 
-Para realizar el proceso de recuperación de errores utilizando puntos de verificación el sistema de gestión de base de datos busca la última transacción $T_i$ que no ha sido comprometida y que empezó a ejecutarse antes del último checkpoint y revierte los cambios. Formalmente, sea $T$ el conjunto de transacciones que incluyen a $T_i$ para todas las transacciones que comenzaron a ejecutarse luego de $T_i$ debe ejecutarse:
+Para realizar el proceso de recuperación de errores utilizando estos puntos de verificación, el sistema de gestión de base de datos busca la última transacción $T_i$ que no ha sido comprometida y que empezó a ejecutarse antes del último punto de verificación y revierte los cambios. Formalmente, sea $T$ el conjunto de transacciones que incluyen a $T_i$ para todas las transacciones que comenzaron a ejecutarse luego de $T_i$ debe ejecutarse:
 
 1. **redo($T_k$)** para todas las transacciones $T_k$ en $T$, cuyo registro $<T_k \ Commits>$ aparezca en la bitácora.
 2. **undo($T_k$)** para todas las transacciones $T_k$ en $T$ cuyo registro $<T_k \ Commits>$ no aparezca en la bitácora. En caso de que la base de datos realice las modificaciones de manera inmediata.
 
-En el caso de que se esté utilizando una técnica de modificación diferida, no es necesario llevar a cabo el segundo paso.
+En el caso de que el sistema en cuestión esté utilizando una técnica de modificación diferida, no es necesario llevar a cabo el segundo paso, ya que los cambios no fueron registrados en la base de datos.
 
-### Doble Paginación
+### Implementación de las Transacciones por Doble Paginación
 
-Las bases de datos está compuesta por una cantidad determinada de bloques de longitud fijas llamada ***páginas***. Las bases de datos poseen una tabla de paginación que contiene la dirección en disco de las páginas donde se almacenan los bloques. Para la recuperación de errores se puede optar por mantener dos tablas de paginación durante la vida de una transacción, una actual y su doble. Cuando comienza la transacción las dos tablas son idénticas, pero solo la tabla actual es la que recibe operaciones de escritura. La recuperación consiste en almacenar la tabla de paginación doble en disco de manera que el estado de la base de datos, antes de la transacción, pueda recuperarse es caso de una caída o abortó de una transacción. Cuando la transacción termina la tabla de paginación actual se guarda en disco convirtiéndose en su doble.
-No es importante que la tabla de paginación actual se pierda en una caída, dado que el sistema de recuperación utiliza su doble para restablecer a su estado previo.
+Una forma alternativa de implementar las transacciones es utilizando doble paginación, en este caso la base de datos está compuesta por una cantidad determinada de bloques de longitud fijas llamada ***páginas***. Estas bases de datos poseen una tabla de paginación que contiene la dirección en disco de las páginas donde se almacenan los bloques.
+Para la recuperación ante fallos, se emplean dos tablas de paginación una tabla actual y su duplicado. Al iniciar la transacción, ambas tablas son idénticas, pero solo a la tabla actual se le realizan las operaciones de escritura. La tabla de paginación duplicada se almacena en disco, conservando el estado de la base de datos previo a la transacción, lo que permite que el sistema se recupere en caso de que la transacción falle o sea abortada.
+Al finalizar la transacción, la tabla de paginación actual se guarda en disco, convirtiéndose en el nuevo duplicado. Si se produce una caída y se pierde la tabla actual, el sistema de recuperación utiliza el duplicado para restaurar el estado anterior de la base de datos.
 Para comprometer una transacción, se deben seguir los siguientes pasos:
 
 1. Asegurarse de que todas las páginas del Registro Intermedio (RI) en memoria principal que hayan sido modificadas por la transacción se graben en disco (esto no afecta a las páginas de la Tabla de Paginación doble).
 2. Grabar la tabla de paginación actual en el disco, sin sobrescribir su doble, ya que esta podría ser necesaria para la recuperación en caso de una caída.
 3. Grabar la dirección de la tabla de paginación actual en el disco, en la posición que anteriormente contenía la dirección de su doble.
 
-El principal problema de la doble paginación es que dificulta la implementación de la ejecución concurrente de las transacciones. Además, requiere la implementación de un mecanismo de recolección de residuos para las tablas dobles que se descartan, así como para los bloques modificados, sin mencionar que la doble paginación puede llevar a una fragmentación de datos.
+El principal inconveniente de la doble paginación es que complica la ejecución concurrente de transacciones. Además, requiere la implementación de un mecanismo de recolección de basura para liberar el espacio ocupado por las antiguas tablas duplicadas que fueron descartadas, así como para los bloques modificados, sin mencionar que la doble paginación puede llevar a una fragmentación de datos.
